@@ -1,18 +1,20 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   https://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.core.client.security.tokens;
 
@@ -33,7 +35,6 @@ import javax.security.auth.Destroyable;
 import org.apache.hadoop.io.Writable;
 
 /**
- *
  * @since 1.5.0
  */
 public interface AuthenticationToken extends Writable, Destroyable, Cloneable {
@@ -45,7 +46,7 @@ public interface AuthenticationToken extends Writable, Destroyable, Cloneable {
    *
    * @since 1.6.0
    */
-  public static final class AuthenticationTokenSerializer {
+  final class AuthenticationTokenSerializer {
     /**
      * A convenience method to create tokens from serialized bytes, created by
      * {@link #serialize(AuthenticationToken)}
@@ -53,10 +54,8 @@ public interface AuthenticationToken extends Writable, Destroyable, Cloneable {
      * The specified tokenType will be instantiated, and used to deserialize the decoded bytes. The
      * resulting object will then be returned to the caller.
      *
-     * @param tokenType
-     *          the token class to use to deserialize the bytes
-     * @param tokenBytes
-     *          the token-specific serialized bytes
+     * @param tokenType the token class to use to deserialize the bytes
+     * @param tokenBytes the token-specific serialized bytes
      * @return an {@link AuthenticationToken} instance of the type specified by tokenType
      * @see #serialize(AuthenticationToken)
      */
@@ -64,7 +63,7 @@ public interface AuthenticationToken extends Writable, Destroyable, Cloneable {
         byte[] tokenBytes) {
       T type = null;
       try {
-        type = tokenType.newInstance();
+        type = tokenType.getDeclaredConstructor().newInstance();
       } catch (Exception e) {
         throw new IllegalArgumentException("Cannot instantiate " + tokenType.getName(), e);
       }
@@ -88,21 +87,17 @@ public interface AuthenticationToken extends Writable, Destroyable, Cloneable {
      * An alternate version of {@link #deserialize(Class, byte[])} that accepts a token class name
      * rather than a token class.
      *
-     * @param tokenClassName
-     *          the fully-qualified class name to be returned
+     * @param tokenClassName the fully-qualified class name to be returned
      * @see #serialize(AuthenticationToken)
      */
     public static AuthenticationToken deserialize(String tokenClassName, byte[] tokenBytes) {
-      Class<? extends AuthenticationToken> tokenType = null;
       try {
         @SuppressWarnings("unchecked")
-        Class<? extends AuthenticationToken> tmpTokenType =
-            (Class<? extends AuthenticationToken>) Class.forName(tokenClassName);
-        tokenType = tmpTokenType;
+        var tokenType = (Class<? extends AuthenticationToken>) Class.forName(tokenClassName);
+        return deserialize(tokenType, tokenBytes);
       } catch (ClassNotFoundException e) {
         throw new IllegalArgumentException("Class not available " + tokenClassName, e);
       }
-      return deserialize(tokenType, tokenBytes);
     }
 
     /**
@@ -111,26 +106,17 @@ public interface AuthenticationToken extends Writable, Destroyable, Cloneable {
      * The provided {@link AuthenticationToken} will be serialized to bytes by its own
      * implementation and returned to the caller.
      *
-     * @param token
-     *          the token to serialize
+     * @param token the token to serialize
      * @return a serialized representation of the provided {@link AuthenticationToken}
      * @see #deserialize(Class, byte[])
      */
     public static byte[] serialize(AuthenticationToken token) {
-      ByteArrayOutputStream baos = new ByteArrayOutputStream();
-      DataOutputStream out = new DataOutputStream(baos);
-      try {
+      try (var baos = new ByteArrayOutputStream(); var out = new DataOutputStream(baos)) {
         token.write(out);
+        return baos.toByteArray();
       } catch (IOException e) {
         throw new RuntimeException("Bug found in serialization code", e);
       }
-      byte[] bytes = baos.toByteArray();
-      try {
-        out.close();
-      } catch (IOException e) {
-        throw new IllegalStateException("Shouldn't happen with ByteArrayOutputStream", e);
-      }
-      return bytes;
     }
   }
 
@@ -140,15 +126,17 @@ public interface AuthenticationToken extends Writable, Destroyable, Cloneable {
     private HashMap<String,char[]> map = new HashMap<>();
 
     private void checkDestroyed() {
-      if (destroyed)
+      if (destroyed) {
         throw new IllegalStateException();
+      }
     }
 
     public char[] put(String key, CharSequence value) {
       checkDestroyed();
       char[] toPut = new char[value.length()];
-      for (int i = 0; i < value.length(); i++)
+      for (int i = 0; i < value.length(); i++) {
         toPut[i] = value.charAt(i);
+      }
       return map.put(key, toPut);
     }
 
@@ -251,7 +239,7 @@ public interface AuthenticationToken extends Writable, Destroyable, Cloneable {
     }
   }
 
-  static class TokenProperty implements Comparable<TokenProperty> {
+  class TokenProperty implements Comparable<TokenProperty> {
     private String key, description;
     private boolean masked;
 
@@ -285,8 +273,9 @@ public interface AuthenticationToken extends Writable, Destroyable, Cloneable {
 
     @Override
     public boolean equals(Object o) {
-      if (o instanceof TokenProperty)
+      if (o instanceof TokenProperty) {
         return ((TokenProperty) o).key.equals(key);
+      }
       return false;
     }
 
@@ -296,9 +285,9 @@ public interface AuthenticationToken extends Writable, Destroyable, Cloneable {
     }
   }
 
-  public void init(Properties properties);
+  void init(Properties properties);
 
-  public Set<TokenProperty> getProperties();
+  Set<TokenProperty> getProperties();
 
-  public AuthenticationToken clone();
+  AuthenticationToken clone();
 }
