@@ -1,24 +1,26 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   https://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.core.file;
 
+import static org.apache.accumulo.core.file.blockfile.impl.CacheProvider.NULL_PROVIDER;
+
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
 
@@ -27,22 +29,36 @@ import org.apache.accumulo.core.conf.AccumuloConfiguration;
 import org.apache.accumulo.core.conf.Property;
 import org.apache.accumulo.core.data.ByteSequence;
 import org.apache.accumulo.core.data.Range;
-import org.apache.accumulo.core.file.blockfile.cache.BlockCache;
+import org.apache.accumulo.core.file.blockfile.impl.CacheProvider;
 import org.apache.accumulo.core.file.rfile.RFile;
+import org.apache.accumulo.core.spi.crypto.CryptoService;
 import org.apache.accumulo.core.util.ratelimit.RateLimiter;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FSDataOutputStream;
 import org.apache.hadoop.fs.FileSystem;
+import org.apache.hadoop.mapred.FileOutputCommitter;
 
-import com.google.common.cache.Cache;
+import com.github.benmanes.caffeine.cache.Cache;
 
 public abstract class FileOperations {
 
-  private static final HashSet<String> validExtensions =
-      new HashSet<>(Arrays.asList(Constants.MAPFILE_EXTENSION, RFile.EXTENSION));
+  private static final String HADOOP_JOBHISTORY_LOCATION = "_logs"; // dir related to
+                                                                    // hadoop.job.history.user.location
+
+  private static final Set<String> validExtensions =
+      Set.of(Constants.MAPFILE_EXTENSION, RFile.EXTENSION);
+
+  // Sometimes we want to know what files accumulo bulk processing creates
+  private static final Set<String> bulkWorkingFiles =
+      Set.of(Constants.BULK_LOAD_MAPPING, Constants.BULK_RENAME_FILE,
+          FileOutputCommitter.SUCCEEDED_FILE_NAME, HADOOP_JOBHISTORY_LOCATION);
 
   public static Set<String> getValidExtensions() {
     return validExtensions;
+  }
+
+  public static Set<String> getBulkWorkingFiles() {
+    return bulkWorkingFiles;
   }
 
   public static String getNewFileExtension(AccumuloConfiguration acuconf) {
@@ -57,33 +73,19 @@ public abstract class FileOperations {
   // Abstract methods (to be implemented by subclasses)
   //
 
-  protected abstract long getFileSize(GetFileSizeOperation options) throws IOException;
+  protected abstract long getFileSize(FileOptions options) throws IOException;
 
-  protected abstract FileSKVWriter openWriter(OpenWriterOperation options) throws IOException;
+  protected abstract FileSKVWriter openWriter(FileOptions options) throws IOException;
 
-  protected abstract FileSKVIterator openIndex(OpenIndexOperation options) throws IOException;
+  protected abstract FileSKVIterator openIndex(FileOptions options) throws IOException;
 
-  protected abstract FileSKVIterator openScanReader(OpenScanReaderOperation options)
-      throws IOException;
+  protected abstract FileSKVIterator openScanReader(FileOptions options) throws IOException;
 
-  protected abstract FileSKVIterator openReader(OpenReaderOperation options) throws IOException;
+  protected abstract FileSKVIterator openReader(FileOptions options) throws IOException;
 
   //
   // File operations
   //
-
-  /**
-   * Construct an operation object allowing one to query the size of a file. <br>
-   * Syntax:
-   *
-   * <pre>
-   * long size = fileOperations.getFileSize().forFile(filename, fileSystem, fsConfiguration)
-   *     .withTableConfiguration(tableConf).execute();
-   * </pre>
-   */
-  public NeedsFile<GetFileSizeOperationBuilder> getFileSize() {
-    return new GetFileSizeOperation();
-  }
 
   /**
    * Construct an operation object allowing one to create a writer for a file. <br>
@@ -98,8 +100,8 @@ public abstract class FileOperations {
    *     .build();
    * </pre>
    */
-  public NeedsFileOrOuputStream<OpenWriterOperationBuilder> newWriterBuilder() {
-    return new OpenWriterOperation();
+  public WriterBuilder newWriterBuilder() {
+    return new WriterBuilder();
   }
 
   /**
@@ -115,8 +117,8 @@ public abstract class FileOperations {
    *     .build();
    * </pre>
    */
-  public NeedsFile<OpenIndexOperationBuilder> newIndexReaderBuilder() {
-    return new OpenIndexOperation();
+  public IndexReaderBuilder newIndexReaderBuilder() {
+    return new IndexReaderBuilder();
   }
 
   /**
@@ -137,10 +139,8 @@ public abstract class FileOperations {
    *     .build();
    * </pre>
    */
-  @SuppressWarnings("unchecked")
-  public NeedsFile<NeedsRange<OpenScanReaderOperationBuilder>> newScanReaderBuilder() {
-    return (NeedsFile<
-        NeedsRange<OpenScanReaderOperationBuilder>>) (NeedsFile<?>) new OpenScanReaderOperation();
+  public ScanReaderBuilder newScanReaderBuilder() {
+    return new ScanReaderBuilder();
   }
 
   /**
@@ -159,66 +159,57 @@ public abstract class FileOperations {
    *     .build();
    * </pre>
    */
-  public NeedsFile<OpenReaderOperationBuilder> newReaderBuilder() {
-    return new OpenReaderOperation();
+  public ReaderBuilder newReaderBuilder() {
+    return new ReaderBuilder();
   }
 
-  //
-  // Domain specific embedded language for execution of operations.
-  //
-  // Here, for each ...Operation class which is a POJO holding a group of parameters,
-  // we have a parallel ...OperationBuilder interface which only exposes the setters / execute
-  // methods.
-  // This allows us to expose only the setter/execute methods to upper layers, while
-  // allowing lower layers the freedom to both get and set.
-  //
+  public static class FileOptions {
+    // objects used by all
+    public final AccumuloConfiguration tableConfiguration;
+    public final String filename;
+    public final FileSystem fs;
+    public final Configuration fsConf;
+    public final RateLimiter rateLimiter;
+    // writer only objects
+    public final String compression;
+    public final FSDataOutputStream outputStream;
+    public final boolean enableAccumuloStart;
+    // reader only objects
+    public final CacheProvider cacheProvider;
+    public final Cache<String,Long> fileLenCache;
+    public final boolean seekToBeginning;
+    public final CryptoService cryptoService;
+    // scan reader only objects
+    public final Range range;
+    public final Set<ByteSequence> columnFamilies;
+    public final boolean inclusive;
+    public final boolean dropCacheBehind;
 
-  /**
-   * Options common to all FileOperations.
-   */
-  protected static class FileAccessOperation<
-      SubclassType extends FileAccessOperation<SubclassType>> {
-    private AccumuloConfiguration tableConfiguration;
-
-    private String filename;
-    private FileSystem fs;
-    private Configuration fsConf;
-
-    /** Specify the table configuration defining access to this file. */
-    @SuppressWarnings("unchecked")
-    public SubclassType withTableConfiguration(AccumuloConfiguration tableConfiguration) {
+    public FileOptions(AccumuloConfiguration tableConfiguration, String filename, FileSystem fs,
+        Configuration fsConf, RateLimiter rateLimiter, String compression,
+        FSDataOutputStream outputStream, boolean enableAccumuloStart, CacheProvider cacheProvider,
+        Cache<String,Long> fileLenCache, boolean seekToBeginning, CryptoService cryptoService,
+        Range range, Set<ByteSequence> columnFamilies, boolean inclusive, boolean dropCacheBehind) {
       this.tableConfiguration = tableConfiguration;
-      return (SubclassType) this;
-    }
-
-    /** Specify the file this operation should apply to. */
-    @SuppressWarnings("unchecked")
-    public SubclassType forFile(String filename, FileSystem fs, Configuration fsConf) {
       this.filename = filename;
       this.fs = fs;
       this.fsConf = fsConf;
-      return (SubclassType) this;
+      this.rateLimiter = rateLimiter;
+      this.compression = compression;
+      this.outputStream = outputStream;
+      this.enableAccumuloStart = enableAccumuloStart;
+      this.cacheProvider = cacheProvider;
+      this.fileLenCache = fileLenCache;
+      this.seekToBeginning = seekToBeginning;
+      this.cryptoService = Objects.requireNonNull(cryptoService);
+      this.range = range;
+      this.columnFamilies = columnFamilies;
+      this.inclusive = inclusive;
+      this.dropCacheBehind = dropCacheBehind;
     }
 
-    /** Specify the file this operation should apply to. */
-    @SuppressWarnings("unchecked")
-    public SubclassType forFile(String filename) {
-      this.filename = filename;
-      return (SubclassType) this;
-    }
-
-    /**
-     * Specify the filesystem which this operation should apply to, along with its configuration.
-     */
-    @SuppressWarnings("unchecked")
-    public SubclassType inFileSystem(FileSystem fs, Configuration fsConf) {
-      this.fs = fs;
-      this.fsConf = fsConf;
-      return (SubclassType) this;
-    }
-
-    protected void setFilename(String filename) {
-      this.filename = filename;
+    public AccumuloConfiguration getTableConfiguration() {
+      return tableConfiguration;
     }
 
     public String getFilename() {
@@ -229,104 +220,12 @@ public abstract class FileOperations {
       return fs;
     }
 
-    protected void setConfiguration(Configuration fsConf) {
-      this.fsConf = fsConf;
-    }
-
     public Configuration getConfiguration() {
       return fsConf;
     }
 
-    public AccumuloConfiguration getTableConfiguration() {
-      return tableConfiguration;
-    }
-
-    /** Check for null parameters. */
-    protected void validate() {
-      Objects.requireNonNull(getFilename());
-      Objects.requireNonNull(getFileSystem());
-      Objects.requireNonNull(getConfiguration());
-      Objects.requireNonNull(getTableConfiguration());
-    }
-  }
-
-  /** Builder interface parallel to {@link FileAccessOperation}. */
-  protected static interface FileAccessOperationBuilder<SubbuilderType>
-      extends NeedsFile<SubbuilderType>, NeedsFileSystem<SubbuilderType>,
-      NeedsTableConfiguration<SubbuilderType> {
-    // no optional/generic methods.
-  }
-
-  /**
-   * Operation object for performing {@code getFileSize()} operations.
-   */
-  protected class GetFileSizeOperation extends FileAccessOperation<GetFileSizeOperation>
-      implements GetFileSizeOperationBuilder {
-    /** Return the size of the file. */
-    @Override
-    public long execute() throws IOException {
-      validate();
-      return getFileSize(this);
-    }
-  }
-
-  /**
-   * Builder interface for {@link GetFileSizeOperation}, allowing execution of {@code getFileSize()}
-   * operations.
-   */
-  public static interface GetFileSizeOperationBuilder
-      extends FileAccessOperationBuilder<GetFileSizeOperationBuilder> {
-    /** Return the size of the file. */
-    public long execute() throws IOException;
-  }
-
-  /**
-   * Options common to all {@code FileOperation}s which perform reading or writing.
-   */
-  protected static class FileIOOperation<SubclassType extends FileIOOperation<SubclassType>>
-      extends FileAccessOperation<SubclassType> {
-    private RateLimiter rateLimiter;
-
-    /** Specify a rate limiter for this operation. */
-    @SuppressWarnings("unchecked")
-    public SubclassType withRateLimiter(RateLimiter rateLimiter) {
-      this.rateLimiter = rateLimiter;
-      return (SubclassType) this;
-    }
-
     public RateLimiter getRateLimiter() {
       return rateLimiter;
-    }
-  }
-
-  /** Builder interface parallel to {@link FileIOOperation}. */
-  protected static interface FileIOOperationBuilder<SubbuilderType>
-      extends FileAccessOperationBuilder<SubbuilderType> {
-    /** Specify a rate limiter for this operation. */
-    public SubbuilderType withRateLimiter(RateLimiter rateLimiter);
-  }
-
-  /**
-   * Operation object for constructing a writer.
-   */
-  protected class OpenWriterOperation extends FileIOOperation<OpenWriterOperation>
-      implements OpenWriterOperationBuilder, NeedsFileOrOuputStream<OpenWriterOperationBuilder> {
-    private String compression;
-    private FSDataOutputStream outputStream;
-
-    @Override
-    public NeedsTableConfiguration<OpenWriterOperationBuilder> forOutputStream(String extenstion,
-        FSDataOutputStream outputStream, Configuration fsConf) {
-      this.outputStream = outputStream;
-      setConfiguration(fsConf);
-      setFilename("foo" + extenstion);
-      return this;
-    }
-
-    @Override
-    public OpenWriterOperation withCompression(String compression) {
-      this.compression = compression;
-      return this;
     }
 
     public String getCompression() {
@@ -337,153 +236,30 @@ public abstract class FileOperations {
       return outputStream;
     }
 
-    @Override
-    protected void validate() {
-      if (outputStream == null) {
-        super.validate();
-      } else {
-        Objects.requireNonNull(getConfiguration());
-        Objects.requireNonNull(getTableConfiguration());
-      }
+    public boolean isAccumuloStartEnabled() {
+      return enableAccumuloStart;
     }
 
-    @Override
-    public FileSKVWriter build() throws IOException {
-      validate();
-      return openWriter(this);
-    }
-  }
-
-  /** Builder interface parallel to {@link OpenWriterOperation}. */
-  public static interface OpenWriterOperationBuilder
-      extends FileIOOperationBuilder<OpenWriterOperationBuilder> {
-    /** Set the compression type. */
-    public OpenWriterOperationBuilder withCompression(String compression);
-
-    /** Construct the writer. */
-    public FileSKVWriter build() throws IOException;
-  }
-
-  /**
-   * Options common to all {@code FileOperations} which perform reads.
-   */
-  protected static class FileReaderOperation<SubclassType extends FileReaderOperation<SubclassType>>
-      extends FileIOOperation<SubclassType> {
-    private BlockCache dataCache;
-    private BlockCache indexCache;
-    private Cache<String,Long> fileLenCache;
-
-    /**
-     * (Optional) Set the block cache pair to be used to optimize reads within the constructed
-     * reader.
-     */
-    @SuppressWarnings("unchecked")
-    public SubclassType withBlockCache(BlockCache dataCache, BlockCache indexCache) {
-      this.dataCache = dataCache;
-      this.indexCache = indexCache;
-      return (SubclassType) this;
-    }
-
-    /** (Optional) set the data cache to be used to optimize reads within the constructed reader. */
-    @SuppressWarnings("unchecked")
-    public SubclassType withDataCache(BlockCache dataCache) {
-      this.dataCache = dataCache;
-      return (SubclassType) this;
-    }
-
-    /**
-     * (Optional) set the index cache to be used to optimize reads within the constructed reader.
-     */
-    @SuppressWarnings("unchecked")
-    public SubclassType withIndexCache(BlockCache indexCache) {
-      this.indexCache = indexCache;
-      return (SubclassType) this;
-    }
-
-    @SuppressWarnings("unchecked")
-    public SubclassType withFileLenCache(Cache<String,Long> fileLenCache) {
-      this.fileLenCache = fileLenCache;
-      return (SubclassType) this;
-    }
-
-    public BlockCache getDataCache() {
-      return dataCache;
-    }
-
-    public BlockCache getIndexCache() {
-      return indexCache;
+    public CacheProvider getCacheProvider() {
+      return cacheProvider;
     }
 
     public Cache<String,Long> getFileLenCache() {
       return fileLenCache;
     }
-  }
 
-  /** Builder interface parallel to {@link FileReaderOperation}. */
-  protected static interface FileReaderOperationBuilder<SubbuilderType>
-      extends FileIOOperationBuilder<SubbuilderType> {
-    /**
-     * (Optional) Set the block cache pair to be used to optimize reads within the constructed
-     * reader.
-     */
-    public SubbuilderType withBlockCache(BlockCache dataCache, BlockCache indexCache);
-
-    /** (Optional) set the data cache to be used to optimize reads within the constructed reader. */
-    public SubbuilderType withDataCache(BlockCache dataCache);
-
-    /**
-     * (Optional) set the index cache to be used to optimize reads within the constructed reader.
-     */
-    public SubbuilderType withIndexCache(BlockCache indexCache);
-
-    /**
-     * (Optional) set the file len cache to be used to optimize reads within the constructed reader.
-     */
-    public SubbuilderType withFileLenCache(Cache<String,Long> fileLenCache);
-  }
-
-  /**
-   * Operation object for opening an index.
-   */
-  protected class OpenIndexOperation extends FileReaderOperation<OpenIndexOperation>
-      implements OpenIndexOperationBuilder {
-    @Override
-    public FileSKVIterator build() throws IOException {
-      validate();
-      return openIndex(this);
-    }
-  }
-
-  /** Builder interface parallel to {@link OpenIndexOperation}. */
-  public static interface OpenIndexOperationBuilder
-      extends FileReaderOperationBuilder<OpenIndexOperationBuilder> {
-    /** Construct the reader. */
-    public FileSKVIterator build() throws IOException;
-  }
-
-  /** Operation object for opening a scan reader. */
-  protected class OpenScanReaderOperation extends FileReaderOperation<OpenScanReaderOperation>
-      implements OpenScanReaderOperationBuilder {
-    private Range range;
-    private Set<ByteSequence> columnFamilies;
-    private boolean inclusive;
-
-    /** Set the range over which the constructed iterator will search. */
-    @Override
-    public OpenScanReaderOperation overRange(Range range, Set<ByteSequence> columnFamilies,
-        boolean inclusive) {
-      this.range = range;
-      this.columnFamilies = columnFamilies;
-      this.inclusive = inclusive;
-      return this;
+    public boolean isSeekToBeginning() {
+      return seekToBeginning;
     }
 
-    /** The range over which this reader should scan. */
+    public CryptoService getCryptoService() {
+      return cryptoService;
+    }
+
     public Range getRange() {
       return range;
     }
 
-    /** The column families which this reader should scan. */
     public Set<ByteSequence> getColumnFamilies() {
       return columnFamilies;
     }
@@ -491,122 +267,281 @@ public abstract class FileOperations {
     public boolean isRangeInclusive() {
       return inclusive;
     }
+  }
 
-    @Override
-    protected void validate() {
-      super.validate();
-      Objects.requireNonNull(range);
-      Objects.requireNonNull(columnFamilies);
+  /**
+   * Helper class extended by both writers and readers.
+   */
+  public static class FileHelper {
+    private AccumuloConfiguration tableConfiguration;
+    private String filename;
+    private FileSystem fs;
+    private Configuration fsConf;
+    private RateLimiter rateLimiter;
+    private CryptoService cryptoService;
+    private boolean dropCacheBehind = false;
+
+    protected FileHelper fs(FileSystem fs) {
+      this.fs = Objects.requireNonNull(fs);
+      return this;
     }
 
-    /** Execute the operation, constructing a scan iterator. */
-    @Override
-    public FileSKVIterator build() throws IOException {
-      validate();
-      return openScanReader(this);
+    protected FileHelper fsConf(Configuration fsConf) {
+      this.fsConf = Objects.requireNonNull(fsConf);
+      return this;
+    }
+
+    protected FileHelper filename(String filename) {
+      this.filename = Objects.requireNonNull(filename);
+      return this;
+    }
+
+    protected FileHelper tableConfiguration(AccumuloConfiguration tableConfiguration) {
+      this.tableConfiguration = Objects.requireNonNull(tableConfiguration);
+      return this;
+    }
+
+    protected FileHelper rateLimiter(RateLimiter rateLimiter) {
+      this.rateLimiter = rateLimiter;
+      return this;
+    }
+
+    protected FileHelper cryptoService(CryptoService cs) {
+      this.cryptoService = Objects.requireNonNull(cs);
+      return this;
+    }
+
+    protected FileHelper dropCacheBehind(boolean drop) {
+      this.dropCacheBehind = drop;
+      return this;
+    }
+
+    protected FileOptions toWriterBuilderOptions(String compression,
+        FSDataOutputStream outputStream, boolean startEnabled) {
+      return new FileOptions(tableConfiguration, filename, fs, fsConf, rateLimiter, compression,
+          outputStream, startEnabled, NULL_PROVIDER, null, false, cryptoService, null, null, true,
+          dropCacheBehind);
+    }
+
+    protected FileOptions toReaderBuilderOptions(CacheProvider cacheProvider,
+        Cache<String,Long> fileLenCache, boolean seekToBeginning) {
+      return new FileOptions(tableConfiguration, filename, fs, fsConf, rateLimiter, null, null,
+          false, cacheProvider == null ? NULL_PROVIDER : cacheProvider, fileLenCache,
+          seekToBeginning, cryptoService, null, null, true, dropCacheBehind);
+    }
+
+    protected FileOptions toIndexReaderBuilderOptions(Cache<String,Long> fileLenCache) {
+      return new FileOptions(tableConfiguration, filename, fs, fsConf, rateLimiter, null, null,
+          false, NULL_PROVIDER, fileLenCache, false, cryptoService, null, null, true,
+          dropCacheBehind);
+    }
+
+    protected FileOptions toScanReaderBuilderOptions(Range range, Set<ByteSequence> columnFamilies,
+        boolean inclusive) {
+      return new FileOptions(tableConfiguration, filename, fs, fsConf, rateLimiter, null, null,
+          false, NULL_PROVIDER, null, false, cryptoService, range, columnFamilies, inclusive,
+          dropCacheBehind);
+    }
+
+    protected AccumuloConfiguration getTableConfiguration() {
+      return tableConfiguration;
     }
   }
 
-  /** Builder interface parallel to {@link OpenScanReaderOperation}. */
-  public static interface OpenScanReaderOperationBuilder
-      extends FileReaderOperationBuilder<OpenScanReaderOperationBuilder>,
-      NeedsRange<OpenScanReaderOperationBuilder> {
-    /** Execute the operation, constructing a scan iterator. */
-    public FileSKVIterator build() throws IOException;
+  /**
+   * Operation object for constructing a writer.
+   */
+  public class WriterBuilder extends FileHelper implements WriterTableConfiguration {
+    private String compression;
+    private FSDataOutputStream outputStream;
+    private boolean enableAccumuloStart = true;
+
+    public WriterTableConfiguration forOutputStream(String extension,
+        FSDataOutputStream outputStream, Configuration fsConf, CryptoService cs) {
+      this.outputStream = outputStream;
+      filename("foo" + extension).fsConf(fsConf).cryptoService(cs);
+      return this;
+    }
+
+    public WriterTableConfiguration forFile(String filename, FileSystem fs, Configuration fsConf,
+        CryptoService cs) {
+      filename(filename).fs(fs).fsConf(fsConf).cryptoService(cs);
+      return this;
+    }
+
+    @Override
+    public WriterBuilder withTableConfiguration(AccumuloConfiguration tableConfiguration) {
+      tableConfiguration(tableConfiguration);
+      return this;
+    }
+
+    public WriterBuilder withStartDisabled() {
+      this.enableAccumuloStart = false;
+      return this;
+    }
+
+    public WriterBuilder withCompression(String compression) {
+      this.compression = compression;
+      return this;
+    }
+
+    public WriterBuilder withRateLimiter(RateLimiter rateLimiter) {
+      rateLimiter(rateLimiter);
+      return this;
+    }
+
+    public WriterBuilder dropCachesBehind() {
+      this.dropCacheBehind(true);
+      return this;
+    }
+
+    public FileSKVWriter build() throws IOException {
+      return openWriter(toWriterBuilderOptions(compression, outputStream, enableAccumuloStart));
+    }
   }
 
-  /** Operation object for opening a full reader. */
-  protected class OpenReaderOperation extends FileReaderOperation<OpenReaderOperation>
-      implements OpenReaderOperationBuilder {
+  public interface WriterTableConfiguration {
+    public WriterBuilder withTableConfiguration(AccumuloConfiguration tableConfiguration);
+  }
+
+  /**
+   * Options common to all {@code FileOperations} which perform reads.
+   */
+  public class ReaderBuilder extends FileHelper implements ReaderTableConfiguration {
+    private CacheProvider cacheProvider;
+    private Cache<String,Long> fileLenCache;
     private boolean seekToBeginning = false;
+
+    public ReaderTableConfiguration forFile(String filename, FileSystem fs, Configuration fsConf,
+        CryptoService cs) {
+      filename(filename).fs(fs).fsConf(fsConf).cryptoService(cs);
+      return this;
+    }
+
+    @Override
+    public ReaderBuilder withTableConfiguration(AccumuloConfiguration tableConfiguration) {
+      tableConfiguration(tableConfiguration);
+      return this;
+    }
+
+    /**
+     * (Optional) Set the block cache pair to be used to optimize reads within the constructed
+     * reader.
+     */
+    public ReaderBuilder withCacheProvider(CacheProvider cacheProvider) {
+      this.cacheProvider = cacheProvider;
+      return this;
+    }
+
+    public ReaderBuilder withFileLenCache(Cache<String,Long> fileLenCache) {
+      this.fileLenCache = fileLenCache;
+      return this;
+    }
+
+    public ReaderBuilder withRateLimiter(RateLimiter rateLimiter) {
+      rateLimiter(rateLimiter);
+      return this;
+    }
+
+    public ReaderBuilder dropCachesBehind() {
+      this.dropCacheBehind(true);
+      return this;
+    }
 
     /**
      * Seek the constructed iterator to the beginning of its domain before returning. Equivalent to
      * {@code seekToBeginning(true)}.
      */
-    @Override
-    public OpenReaderOperation seekToBeginning() {
-      return seekToBeginning(true);
+    public ReaderBuilder seekToBeginning() {
+      seekToBeginning(true);
+      return this;
     }
 
     /** If true, seek the constructed iterator to the beginning of its domain before returning. */
-    @Override
-    public OpenReaderOperation seekToBeginning(boolean seekToBeginning) {
+    public ReaderBuilder seekToBeginning(boolean seekToBeginning) {
       this.seekToBeginning = seekToBeginning;
       return this;
     }
 
-    public boolean isSeekToBeginning() {
-      return seekToBeginning;
-    }
-
     /** Execute the operation, constructing the specified file reader. */
-    @Override
     public FileSKVIterator build() throws IOException {
-      validate();
-      return openReader(this);
+      return openReader(toReaderBuilderOptions(cacheProvider, fileLenCache, seekToBeginning));
     }
   }
 
-  /** Builder parallel to {@link OpenReaderOperation}. */
-  public static interface OpenReaderOperationBuilder
-      extends FileReaderOperationBuilder<OpenReaderOperationBuilder> {
-    /**
-     * Seek the constructed iterator to the beginning of its domain before returning. Equivalent to
-     * {@code seekToBeginning(true)}.
-     */
-    public OpenReaderOperationBuilder seekToBeginning();
-
-    /** If true, seek the constructed iterator to the beginning of its domain before returning. */
-    public OpenReaderOperationBuilder seekToBeginning(boolean seekToBeginning);
-
-    /** Execute the operation, constructing the specified file reader. */
-    public FileSKVIterator build() throws IOException;
+  public interface ReaderTableConfiguration {
+    ReaderBuilder withTableConfiguration(AccumuloConfiguration tableConfiguration);
   }
 
   /**
-   * Type wrapper to ensure that {@code forFile(...)} is called before other methods.
+   * Operation object for opening an index.
    */
-  public static interface NeedsFile<ReturnType> {
-    /** Specify the file this operation should apply to. */
-    public NeedsTableConfiguration<ReturnType> forFile(String filename, FileSystem fs,
-        Configuration fsConf);
+  public class IndexReaderBuilder extends FileHelper implements IndexReaderTableConfiguration {
 
-    /** Specify the file this operation should apply to. */
-    public NeedsFileSystem<ReturnType> forFile(String filename);
+    private Cache<String,Long> fileLenCache = null;
+
+    public IndexReaderTableConfiguration forFile(String filename, FileSystem fs,
+        Configuration fsConf, CryptoService cs) {
+      filename(filename).fs(fs).fsConf(fsConf).cryptoService(cs);
+      return this;
+    }
+
+    @Override
+    public IndexReaderBuilder withTableConfiguration(AccumuloConfiguration tableConfiguration) {
+      tableConfiguration(tableConfiguration);
+      return this;
+    }
+
+    public IndexReaderBuilder withFileLenCache(Cache<String,Long> fileLenCache) {
+      this.fileLenCache = fileLenCache;
+      return this;
+    }
+
+    public FileSKVIterator build() throws IOException {
+      return openIndex(toIndexReaderBuilderOptions(fileLenCache));
+    }
   }
 
-  public static interface NeedsFileOrOuputStream<ReturnType> extends NeedsFile<ReturnType> {
-    /** Specify the file this operation should apply to. */
-    public NeedsTableConfiguration<ReturnType> forOutputStream(String extenstion,
-        FSDataOutputStream out, Configuration fsConf);
+  public interface IndexReaderTableConfiguration {
+    IndexReaderBuilder withTableConfiguration(AccumuloConfiguration tableConfiguration);
   }
 
-  /**
-   * Type wrapper to ensure that {@code inFileSystem(...)} is called before other methods.
-   */
-  public static interface NeedsFileSystem<ReturnType> {
-    /**
-     * Specify the {@link FileSystem} that this operation operates on, along with an alternate
-     * configuration.
-     */
-    public NeedsTableConfiguration<ReturnType> inFileSystem(FileSystem fs, Configuration fsConf);
-  }
+  /** Operation object for opening a scan reader. */
+  public class ScanReaderBuilder extends FileHelper implements ScanReaderTableConfiguration {
+    private Range range;
+    private Set<ByteSequence> columnFamilies;
+    private boolean inclusive;
 
-  /**
-   * Type wrapper to ensure that {@code withTableConfiguration(...)} is called before other methods.
-   */
-  public static interface NeedsTableConfiguration<ReturnType> {
-    /** Specify the table configuration defining access to this file. */
-    public ReturnType withTableConfiguration(AccumuloConfiguration tableConfiguration);
-  }
+    public ScanReaderTableConfiguration forFile(String filename, FileSystem fs,
+        Configuration fsConf, CryptoService cs) {
+      filename(filename).fs(fs).fsConf(fsConf).cryptoService(cs);
+      return this;
+    }
 
-  /**
-   * Type wrapper to ensure that {@code overRange(...)} is called before other methods.
-   */
-  public static interface NeedsRange<ReturnType> {
+    @Override
+    public ScanReaderBuilder withTableConfiguration(AccumuloConfiguration tableConfiguration) {
+      tableConfiguration(tableConfiguration);
+      return this;
+    }
+
     /** Set the range over which the constructed iterator will search. */
-    public ReturnType overRange(Range range, Set<ByteSequence> columnFamilies, boolean inclusive);
+    public ScanReaderBuilder overRange(Range range, Set<ByteSequence> columnFamilies,
+        boolean inclusive) {
+      Objects.requireNonNull(range);
+      Objects.requireNonNull(columnFamilies);
+      this.range = range;
+      this.columnFamilies = columnFamilies;
+      this.inclusive = inclusive;
+      return this;
+    }
+
+    /** Execute the operation, constructing a scan iterator. */
+    public FileSKVIterator build() throws IOException {
+      return openScanReader(toScanReaderBuilderOptions(range, columnFamilies, inclusive));
+    }
   }
 
+  public interface ScanReaderTableConfiguration {
+    ScanReaderBuilder withTableConfiguration(AccumuloConfiguration tableConfiguration);
+  }
 }
