@@ -1,18 +1,20 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   https://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.core.iterators.user;
 
@@ -21,7 +23,6 @@ import static java.nio.charset.StandardCharsets.UTF_8;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -30,7 +31,7 @@ import java.util.Map.Entry;
 import java.util.NoSuchElementException;
 
 import org.apache.accumulo.core.client.IteratorSetting;
-import org.apache.accumulo.core.conf.AccumuloConfiguration;
+import org.apache.accumulo.core.conf.ConfigurationTypeHelper;
 import org.apache.accumulo.core.data.ByteSequence;
 import org.apache.accumulo.core.data.Key;
 import org.apache.accumulo.core.data.PartialKey;
@@ -47,8 +48,7 @@ import org.apache.accumulo.core.security.VisibilityEvaluator;
 import org.apache.accumulo.core.security.VisibilityParseException;
 import org.apache.accumulo.core.util.BadArgumentException;
 import org.apache.accumulo.core.util.Pair;
-import org.apache.commons.collections.BufferOverflowException;
-import org.apache.commons.collections.map.LRUMap;
+import org.apache.commons.collections4.map.LRUMap;
 import org.apache.hadoop.io.Text;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -72,8 +72,7 @@ import org.slf4j.LoggerFactory;
  * fetch column families that are known to not transform at all).
  * <p>
  * If the implementing iterator is transforming column visibilities, then users must be careful NOT
- * to fetch column qualifiers from the scanner. The reason for this is due to ACCUMULO-??? (insert
- * issue number).
+ * to fetch column qualifiers from the scanner.
  * <p>
  * If the implementing iterator is transforming column visibilities, then the user should be sure to
  * supply authorizations via the {@link #AUTH_OPT} iterator option (note that this is only necessary
@@ -90,12 +89,12 @@ import org.slf4j.LoggerFactory;
  * iterator implements the security filtering rather than relying on a follow-on iterator to do it
  * so that we ensure the test is performed.
  */
-abstract public class TransformingIterator extends WrappingIterator implements OptionDescriber {
+public abstract class TransformingIterator extends WrappingIterator implements OptionDescriber {
   public static final String AUTH_OPT = "authorizations";
   public static final String MAX_BUFFER_SIZE_OPT = "maxBufferSize";
   private static final long DEFAULT_MAX_BUFFER_SIZE = 10000000;
 
-  protected Logger log = LoggerFactory.getLogger(getClass());
+  private Logger log = LoggerFactory.getLogger(getClass());
 
   protected ArrayList<Pair<Key,Value>> keys = new ArrayList<>();
   protected int keyPos = -1;
@@ -105,18 +104,11 @@ abstract public class TransformingIterator extends WrappingIterator implements O
   protected boolean seekColumnFamiliesInclusive;
 
   private VisibilityEvaluator ve = null;
-  private LRUMap visibleCache = null;
-  private LRUMap parsedVisibilitiesCache = null;
+  private LRUMap<ByteSequence,Boolean> visibleCache = null;
+  private LRUMap<ByteSequence,Boolean> parsedVisibilitiesCache = null;
   private long maxBufferSize;
 
-  private static Comparator<Pair<Key,Value>> keyComparator = new Comparator<Pair<Key,Value>>() {
-    @Override
-    public int compare(Pair<Key,Value> o1, Pair<Key,Value> o2) {
-      return o1.getFirst().compareTo(o2.getFirst());
-    }
-  };
-
-  public TransformingIterator() {}
+  private static Comparator<Pair<Key,Value>> keyComparator = Comparator.comparing(Pair::getFirst);
 
   @Override
   public void init(SortedKeyValueIterator<Key,Value> source, Map<String,String> options,
@@ -127,17 +119,18 @@ abstract public class TransformingIterator extends WrappingIterator implements O
       String auths = options.get(AUTH_OPT);
       if (auths != null && !auths.isEmpty()) {
         ve = new VisibilityEvaluator(new Authorizations(auths.getBytes(UTF_8)));
-        visibleCache = new LRUMap(100);
+        visibleCache = new LRUMap<>(100);
       }
     }
 
     if (options.containsKey(MAX_BUFFER_SIZE_OPT)) {
-      maxBufferSize = AccumuloConfiguration.getMemoryInBytes(options.get(MAX_BUFFER_SIZE_OPT));
+      maxBufferSize =
+          ConfigurationTypeHelper.getFixedMemoryAsBytes(options.get(MAX_BUFFER_SIZE_OPT));
     } else {
       maxBufferSize = DEFAULT_MAX_BUFFER_SIZE;
     }
 
-    parsedVisibilitiesCache = new LRUMap(100);
+    parsedVisibilitiesCache = new LRUMap<>(100);
   }
 
   @Override
@@ -166,7 +159,7 @@ abstract public class TransformingIterator extends WrappingIterator implements O
         if (option.getKey().equals(AUTH_OPT)) {
           new Authorizations(option.getValue().getBytes(UTF_8));
         } else if (option.getKey().equals(MAX_BUFFER_SIZE_OPT)) {
-          AccumuloConfiguration.getMemoryInBytes(option.getValue());
+          ConfigurationTypeHelper.getFixedMemoryAsBytes(option.getValue());
         }
       } catch (Exception e) {
         throw new IllegalArgumentException(
@@ -182,7 +175,7 @@ abstract public class TransformingIterator extends WrappingIterator implements O
     TransformingIterator copy;
 
     try {
-      copy = getClass().newInstance();
+      copy = getClass().getDeclaredConstructor().newInstance();
     } catch (Exception e) {
       throw new RuntimeException(e);
     }
@@ -199,12 +192,12 @@ abstract public class TransformingIterator extends WrappingIterator implements O
 
     copy.ve = ve;
     if (visibleCache != null) {
-      copy.visibleCache = new LRUMap(visibleCache.maxSize());
+      copy.visibleCache = new LRUMap<>(visibleCache.maxSize());
       copy.visibleCache.putAll(visibleCache);
     }
 
     if (parsedVisibilitiesCache != null) {
-      copy.parsedVisibilitiesCache = new LRUMap(parsedVisibilitiesCache.maxSize());
+      copy.parsedVisibilitiesCache = new LRUMap<>(parsedVisibilitiesCache.maxSize());
       copy.parsedVisibilitiesCache.putAll(parsedVisibilitiesCache);
     }
 
@@ -231,16 +224,18 @@ abstract public class TransformingIterator extends WrappingIterator implements O
   @Override
   public void next() throws IOException {
     // Move on to the next entry since we returned the entry at keyPos before
-    if (keyPos >= 0)
+    if (keyPos >= 0) {
       keyPos++;
+    }
 
     // If we emptied out the transformed key map then transform the next key
-    // set from the source. It’s possible that transformation could produce keys
+    // set from the source. It's possible that transformation could produce keys
     // that are outside of our range or are not visible to the end user, so after the
     // call below we might not have added any keys to the map. Keep going until
     // we either get some keys in the map or exhaust the source iterator.
-    while (!hasTop() && super.hasTop())
+    while (!hasTop() && super.hasTop()) {
       transformKeys();
+    }
   }
 
   @Override
@@ -259,7 +254,7 @@ abstract public class TransformingIterator extends WrappingIterator implements O
     // Range clipping could cause us to trim out all the keys we transformed.
     // Keep looping until we either have some keys in the output range, or have
     // exhausted the source iterator.
-    keyPos = -1; // “Clear” list so hasTop returns false to get us into the loop (transformKeys
+    keyPos = -1; // "Clear" list so hasTop returns false to get us into the loop (transformKeys
                  // actually clears)
     while (!hasTop() && super.hasTop()) {
       // Build up a sorted list of all keys for the same prefix. When
@@ -297,8 +292,9 @@ abstract public class TransformingIterator extends WrappingIterator implements O
     @Override
     public void next() throws IOException {
       // do not let user advance too far and try to avoid reexecuting hasTop()
-      if (!hasTop && !hasTop())
+      if (!hasTop && !hasTop()) {
         throw new NoSuchElementException();
+      }
       hasTop = false;
       source.next();
     }
@@ -343,8 +339,9 @@ abstract public class TransformingIterator extends WrappingIterator implements O
       @Override
       public void append(Key key, Value val) {
         // ensure the key provided by the user has the correct prefix
-        if (!key.equals(prefixKey, getKeyPrefix()))
+        if (!key.equals(prefixKey, getKeyPrefix())) {
           throw new IllegalArgumentException("Key prefixes are not equal " + key + " " + prefixKey);
+        }
 
         // Transformation could have produced a key that falls outside
         // of the seek range, or one that the user cannot see. Check
@@ -352,12 +349,14 @@ abstract public class TransformingIterator extends WrappingIterator implements O
         if (includeTransformedKey(key)) {
 
           // try to defend against a scan or compaction using all memory in a tablet server
-          if (appened > maxBufferSize)
-            throw new BufferOverflowException(
+          if (appened > maxBufferSize) {
+            throw new IllegalArgumentException(
                 "Exceeded buffer size of " + maxBufferSize + ", prefixKey: " + prefixKey);
+          }
 
-          if (getSource().hasTop() && key == getSource().getTopKey())
+          if (getSource().hasTop() && key == getSource().getTopKey()) {
             key = new Key(key);
+          }
           keys.add(new Pair<>(key, new Value(val)));
           appened += (key.getSize() + val.getSize() + 128);
         }
@@ -370,7 +369,7 @@ abstract public class TransformingIterator extends WrappingIterator implements O
     }
 
     if (!keys.isEmpty()) {
-      Collections.sort(keys, keyComparator);
+      keys.sort(keyComparator);
       keyPos = 0;
     }
   }
@@ -384,8 +383,7 @@ abstract public class TransformingIterator extends WrappingIterator implements O
    * be in our transformed key space and we will never change the row so we can't produce keys that
    * would fall outside the tablet anyway.
    *
-   * @param transformedKey
-   *          the key to check
+   * @param transformedKey the key to check
    * @return {@code true} if the key should be included and {@code false} if not
    */
   protected boolean includeTransformedKey(Key transformedKey) {
@@ -403,8 +401,7 @@ abstract public class TransformingIterator extends WrappingIterator implements O
    * authorizations, and the test result is returned. For performance, the test results are cached
    * so that the same visibility is not tested multiple times.
    *
-   * @param key
-   *          the key to test
+   * @param key the key to test
    * @return {@code true} if the key is visible or iterator is not scanning, and {@code false} if
    *         not
    */
@@ -413,13 +410,13 @@ abstract public class TransformingIterator extends WrappingIterator implements O
     // check, even if visibility is not evaluated.
     ByteSequence visibility = key.getColumnVisibilityData();
     ColumnVisibility colVis = null;
-    Boolean parsed = (Boolean) parsedVisibilitiesCache.get(visibility);
+    Boolean parsed = parsedVisibilitiesCache.get(visibility);
     if (parsed == null) {
       try {
         colVis = new ColumnVisibility(visibility.toArray());
         parsedVisibilitiesCache.put(visibility, Boolean.TRUE);
       } catch (BadArgumentException e) {
-        log.error("Parse error after transformation : " + visibility);
+        log.error("Parse error after transformation : {}", visibility);
         parsedVisibilitiesCache.put(visibility, Boolean.FALSE);
         if (scanning) {
           return false;
@@ -428,28 +425,28 @@ abstract public class TransformingIterator extends WrappingIterator implements O
         }
       }
     } else if (!parsed) {
-      if (scanning)
+      if (scanning) {
         return false;
-      else
+      } else {
         throw new IllegalStateException();
+      }
     }
 
     Boolean visible = canSeeColumnFamily(key);
 
-    if (!scanning || !visible || ve == null || visibleCache == null || visibility.length() == 0)
+    if (!scanning || !visible || ve == null || visibleCache == null || visibility.length() == 0) {
       return visible;
+    }
 
-    visible = (Boolean) visibleCache.get(visibility);
+    visible = visibleCache.get(visibility);
     if (visible == null) {
       try {
-        if (colVis == null)
+        if (colVis == null) {
           colVis = new ColumnVisibility(visibility.toArray());
+        }
         visible = ve.evaluate(colVis);
         visibleCache.put(visibility, visible);
-      } catch (VisibilityParseException e) {
-        log.error("Parse Error", e);
-        visible = Boolean.FALSE;
-      } catch (BadArgumentException e) {
+      } catch (VisibilityParseException | BadArgumentException e) {
         log.error("Parse Error", e);
         visible = Boolean.FALSE;
       }
@@ -462,8 +459,7 @@ abstract public class TransformingIterator extends WrappingIterator implements O
    * Indicates whether or not {@code key} can be seen, according to the fetched column families for
    * this iterator.
    *
-   * @param key
-   *          the key whose column family is to be tested
+   * @param key the key whose column family is to be tested
    * @return {@code true} if {@code key}'s column family is one of those fetched in the set passed
    *         to our {@link #seek(Range, Collection, boolean)} method
    */
@@ -471,10 +467,11 @@ abstract public class TransformingIterator extends WrappingIterator implements O
     boolean visible = true;
     if (seekColumnFamilies != null) {
       ByteSequence columnFamily = key.getColumnFamilyData();
-      if (seekColumnFamiliesInclusive)
+      if (seekColumnFamiliesInclusive) {
         visible = seekColumnFamilies.contains(columnFamily);
-      else
+      } else {
         visible = !seekColumnFamilies.contains(columnFamily);
+      }
     }
     return visible;
   }
@@ -484,8 +481,7 @@ abstract public class TransformingIterator extends WrappingIterator implements O
    * That is, if our prefix is ROW_COLFAM, then we need to expand the range so we're sure to include
    * all entries having the same row and column family as the start/end of the range.
    *
-   * @param range
-   *          the range to expand
+   * @param range the range to expand
    * @return the modified range
    */
   protected Range computeReseekRange(Range range) {
@@ -511,10 +507,8 @@ abstract public class TransformingIterator extends WrappingIterator implements O
    * part is ROW_COLFAM_COLQUAL, then this method determines whether or not the column visibility,
    * timestamp, or delete flag is set on {@code key}.
    *
-   * @param key
-   *          the key to check
-   * @param part
-   *          the part of the key that doesn't need to be checked (everything after does)
+   * @param key the key to check
+   * @param part the part of the key that doesn't need to be checked (everything after does)
    * @return {@code true} if anything after {@code part} is set on {@code key}, and {@code false} if
    *         not
    */
@@ -548,10 +542,8 @@ abstract public class TransformingIterator extends WrappingIterator implements O
    * example, if {@code part} is ROW_COLFAM_COLQUAL, then this method would copy the row, column
    * family, and column qualifier from {@code key} into a new key.
    *
-   * @param key
-   *          the key to copy
-   * @param part
-   *          the parts of {@code key} to copy
+   * @param key the key to copy
+   * @param part the parts of {@code key} to copy
    * @return the new key containing {@code part} of {@code key}
    */
   protected Key copyPartialKey(Key key, PartialKey part) {
@@ -667,8 +659,7 @@ abstract public class TransformingIterator extends WrappingIterator implements O
    * fetch/seek will be performed in the transformed space, but when passing the column family set
    * on to the source, the column families need to be in the untransformed space.
    *
-   * @param columnFamilies
-   *          the column families that have been fetched at seek time
+   * @param columnFamilies the column families that have been fetched at seek time
    * @return the untransformed column families that would transform info {@code columnFamilies}
    */
   protected Collection<ByteSequence>
@@ -684,7 +675,7 @@ abstract public class TransformingIterator extends WrappingIterator implements O
    *
    * @return the part of the key this iterator is not transforming
    */
-  abstract protected PartialKey getKeyPrefix();
+  protected abstract PartialKey getKeyPrefix();
 
   public interface KVBuffer {
     void append(Key key, Value val);
@@ -697,20 +688,17 @@ abstract public class TransformingIterator extends WrappingIterator implements O
    * implementors should use one of the helper methods to produce the new key. See any of the
    * replaceKeyParts methods.
    *
-   * @param input
-   *          An iterator over a group of keys with the same prefix. This iterator provides an
-   *          efficient view, bounded by the prefix, of the underlying iterator and can not be
-   *          seeked.
-   * @param output
-   *          An output buffer that holds transformed key values. All key values added to the buffer
-   *          must have the same prefix as the input keys.
+   * @param input An iterator over a group of keys with the same prefix. This iterator provides an
+   *        efficient view, bounded by the prefix, of the underlying iterator and can not be seeked.
+   * @param output An output buffer that holds transformed key values. All key values added to the
+   *        buffer must have the same prefix as the input keys.
    * @see #replaceColumnFamily(Key, Text)
    * @see #replaceColumnQualifier(Key, Text)
    * @see #replaceColumnVisibility(Key, Text)
    * @see #replaceKeyParts(Key, Text, Text)
    * @see #replaceKeyParts(Key, Text, Text, Text)
    */
-  abstract protected void transformRange(SortedKeyValueIterator<Key,Value> input, KVBuffer output)
+  protected abstract void transformRange(SortedKeyValueIterator<Key,Value> input, KVBuffer output)
       throws IOException;
 
   /**
@@ -725,8 +713,7 @@ abstract public class TransformingIterator extends WrappingIterator implements O
    * Configure the maximum amount of memory that can be used for transformation. If this memory is
    * exceeded an exception will be thrown.
    *
-   * @param maxBufferSize
-   *          size in bytes
+   * @param maxBufferSize size in bytes
    */
   public static void setMaxBufferSize(IteratorSetting config, long maxBufferSize) {
     config.addOption(MAX_BUFFER_SIZE_OPT, maxBufferSize + "");
