@@ -1,24 +1,27 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   https://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.core.iterators.user;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -30,27 +33,23 @@ import java.util.Map;
 import java.util.SortedMap;
 import java.util.TreeMap;
 
-import org.apache.accumulo.core.data.ByteSequence;
 import org.apache.accumulo.core.data.Key;
 import org.apache.accumulo.core.data.Range;
 import org.apache.accumulo.core.data.Value;
-import org.apache.accumulo.core.iterators.SortedKeyValueIterator;
-import org.apache.accumulo.core.iterators.SortedMapIterator;
-import org.apache.accumulo.core.iterators.system.MultiIterator;
+import org.apache.accumulo.core.iteratorsImpl.system.MultiIterator;
+import org.apache.accumulo.core.iteratorsImpl.system.SortedMapIterator;
 import org.apache.hadoop.io.Text;
-import org.junit.Test;
-
-import com.google.common.collect.ImmutableList;
+import org.junit.jupiter.api.Test;
 
 public class WholeRowIteratorTest {
 
-  @Test(expected = IOException.class)
+  @Test
   public void testBadDecodeRow() throws IOException {
     Key k = new Key(new Text("r1"), new Text("cf1234567890"));
-    Value v = new Value("v1".getBytes());
-    Value encoded = WholeRowIterator.encodeRow(ImmutableList.of(k), ImmutableList.of(v));
+    Value v = new Value("v1");
+    Value encoded = WholeRowIterator.encodeRow(List.of(k), List.of(v));
     encoded.set(Arrays.copyOfRange(encoded.get(), 0, 10)); // truncate to 10 bytes only
-    WholeRowIterator.decodeRow(k, encoded);
+    assertThrows(IOException.class, () -> WholeRowIterator.decodeRow(k, encoded));
   }
 
   @Test
@@ -58,28 +57,28 @@ public class WholeRowIteratorTest {
     SortedMap<Key,Value> map = new TreeMap<>();
     SortedMap<Key,Value> map2 = new TreeMap<>();
     final Map<Text,Boolean> toInclude = new HashMap<>();
-    map.put(new Key(new Text("r1"), new Text("cf1"), new Text("cq1"), new Text("cv1"), 1l),
-        new Value("val1".getBytes()));
-    map.put(new Key(new Text("r1"), new Text("cf1"), new Text("cq2"), new Text("cv1"), 2l),
-        new Value("val2".getBytes()));
-    map.put(new Key(new Text("r2"), new Text("cf1"), new Text("cq1"), new Text("cv1"), 3l),
-        new Value("val3".getBytes()));
-    map.put(new Key(new Text("r2"), new Text("cf2"), new Text("cq1"), new Text("cv1"), 4l),
-        new Value("val4".getBytes()));
-    map.put(new Key(new Text("r3"), new Text("cf1"), new Text("cq1"), new Text("cv1"), 5l),
-        new Value("val4".getBytes()));
-    map.put(new Key(new Text("r3"), new Text("cf1"), new Text("cq1"), new Text("cv2"), 6l),
-        new Value("val4".getBytes()));
-    map.put(new Key(new Text("r4"), new Text("cf1"), new Text("cq1"), new Text("cv1"), 7l),
-        new Value("".getBytes()));
-    map.put(new Key(new Text("r4"), new Text("cf1"), new Text("cq1"), new Text(""), 8l),
-        new Value("val1".getBytes()));
-    map.put(new Key(new Text("r4"), new Text("cf1"), new Text(""), new Text("cv1"), 9l),
-        new Value("val1".getBytes()));
-    map.put(new Key(new Text("r4"), new Text(""), new Text("cq1"), new Text("cv1"), 10l),
-        new Value("val1".getBytes()));
-    map.put(new Key(new Text(""), new Text("cf1"), new Text("cq1"), new Text("cv1"), 11l),
-        new Value("val1".getBytes()));
+    map.put(new Key(new Text("r1"), new Text("cf1"), new Text("cq1"), new Text("cv1"), 1L),
+        new Value("val1"));
+    map.put(new Key(new Text("r1"), new Text("cf1"), new Text("cq2"), new Text("cv1"), 2L),
+        new Value("val2"));
+    map.put(new Key(new Text("r2"), new Text("cf1"), new Text("cq1"), new Text("cv1"), 3L),
+        new Value("val3"));
+    map.put(new Key(new Text("r2"), new Text("cf2"), new Text("cq1"), new Text("cv1"), 4L),
+        new Value("val4"));
+    map.put(new Key(new Text("r3"), new Text("cf1"), new Text("cq1"), new Text("cv1"), 5L),
+        new Value("val4"));
+    map.put(new Key(new Text("r3"), new Text("cf1"), new Text("cq1"), new Text("cv2"), 6L),
+        new Value("val4"));
+    map.put(new Key(new Text("r4"), new Text("cf1"), new Text("cq1"), new Text("cv1"), 7L),
+        new Value(""));
+    map.put(new Key(new Text("r4"), new Text("cf1"), new Text("cq1"), new Text(""), 8L),
+        new Value("val1"));
+    map.put(new Key(new Text("r4"), new Text("cf1"), new Text(""), new Text("cv1"), 9L),
+        new Value("val1"));
+    map.put(new Key(new Text("r4"), new Text(""), new Text("cq1"), new Text("cv1"), 10L),
+        new Value("val1"));
+    map.put(new Key(new Text(""), new Text("cf1"), new Text("cq1"), new Text("cv1"), 11L),
+        new Value("val1"));
     boolean b = true;
     int trueCount = 0;
     for (Key k : map.keySet()) {
@@ -99,7 +98,7 @@ public class WholeRowIteratorTest {
     SortedMapIterator source = new SortedMapIterator(map);
     WholeRowIterator iter = new WholeRowIterator(source);
     SortedMap<Key,Value> resultMap = new TreeMap<>();
-    iter.seek(new Range(), new ArrayList<ByteSequence>(), false);
+    iter.seek(new Range(), new ArrayList<>(), false);
     int numRows = 0;
     while (iter.hasTop()) {
       numRows++;
@@ -108,7 +107,7 @@ public class WholeRowIteratorTest {
       resultMap.putAll(WholeRowIterator.decodeRow(rowKey, rowValue));
       iter.next();
     }
-    assertTrue(numRows == 5);
+    assertEquals(5, numRows);
     assertEquals(resultMap, map);
 
     WholeRowIterator iter2 = new WholeRowIterator(source) {
@@ -118,7 +117,7 @@ public class WholeRowIteratorTest {
       }
     };
     resultMap.clear();
-    iter2.seek(new Range(), new ArrayList<ByteSequence>(), false);
+    iter2.seek(new Range(), new ArrayList<>(), false);
     numRows = 0;
     while (iter2.hasTop()) {
       numRows++;
@@ -127,14 +126,13 @@ public class WholeRowIteratorTest {
       resultMap.putAll(WholeRowIterator.decodeRow(rowKey, rowValue));
       iter2.next();
     }
-    assertTrue(numRows == trueCount);
+    assertEquals(numRows, trueCount);
     assertEquals(resultMap, map2);
   }
 
   private void pkv(SortedMap<Key,Value> map, String row, String cf, String cq, String cv, long ts,
       String val) {
-    map.put(new Key(new Text(row), new Text(cf), new Text(cq), new Text(cv), ts),
-        new Value(val.getBytes()));
+    map.put(new Key(new Text(row), new Text(cf), new Text(cq), new Text(cv), ts), new Value(val));
   }
 
   @Test
@@ -160,7 +158,7 @@ public class WholeRowIteratorTest {
     WholeRowIterator iter = new WholeRowIterator(source);
 
     Range range = new Range(new Text("row1"), true, new Text("row2"), true);
-    iter.seek(range, new ArrayList<ByteSequence>(), false);
+    iter.seek(range, new ArrayList<>(), false);
 
     assertTrue(iter.hasTop());
     assertEquals(map1, WholeRowIterator.decodeRow(iter.getTopKey(), iter.getTopValue()));
@@ -168,7 +166,7 @@ public class WholeRowIteratorTest {
     // simulate something continuing using the last key from the iterator
     // this is what client and server code will do
     range = new Range(iter.getTopKey(), false, range.getEndKey(), range.isEndKeyInclusive());
-    iter.seek(range, new ArrayList<ByteSequence>(), false);
+    iter.seek(range, new ArrayList<>(), false);
 
     assertTrue(iter.hasTop());
     assertEquals(map2, WholeRowIterator.decodeRow(iter.getTopKey(), iter.getTopValue()));
@@ -192,13 +190,12 @@ public class WholeRowIteratorTest {
     map.putAll(map1);
     map.putAll(map2);
 
-    MultiIterator source = new MultiIterator(
-        Collections.singletonList((SortedKeyValueIterator<Key,Value>) new SortedMapIterator(map)),
+    MultiIterator source = new MultiIterator(Collections.singletonList(new SortedMapIterator(map)),
         new Range(null, true, new Text("row1"), true));
     WholeRowIterator iter = new WholeRowIterator(source);
 
     Range range = new Range(new Text("row1"), true, new Text("row2"), true);
-    iter.seek(range, new ArrayList<ByteSequence>(), false);
+    iter.seek(range, new ArrayList<>(), false);
 
     assertTrue(iter.hasTop());
     assertEquals(map1, WholeRowIterator.decodeRow(iter.getTopKey(), iter.getTopValue()));
@@ -206,7 +203,7 @@ public class WholeRowIteratorTest {
     // simulate something continuing using the last key from the iterator
     // this is what client and server code will do
     range = new Range(iter.getTopKey(), false, range.getEndKey(), range.isEndKeyInclusive());
-    iter.seek(range, new ArrayList<ByteSequence>(), false);
+    iter.seek(range, new ArrayList<>(), false);
 
     assertFalse(iter.hasTop());
 
