@@ -1,18 +1,20 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   https://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.test;
 
@@ -24,17 +26,15 @@ import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.concurrent.TimeUnit;
 
+import org.apache.accumulo.core.client.Accumulo;
+import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.client.BatchWriter;
 import org.apache.accumulo.core.client.BatchWriterConfig;
-import org.apache.accumulo.core.client.ClientConfiguration;
-import org.apache.accumulo.core.client.Connector;
-import org.apache.accumulo.core.client.Instance;
 import org.apache.accumulo.core.client.IteratorSetting;
-import org.apache.accumulo.core.client.MutationsRejectedException;
 import org.apache.accumulo.core.client.TableNotFoundException;
-import org.apache.accumulo.core.client.ZooKeeperInstance;
-import org.apache.accumulo.core.client.impl.TabletLocator;
 import org.apache.accumulo.core.client.security.tokens.AuthenticationToken;
+import org.apache.accumulo.core.clientImpl.ClientInfo;
+import org.apache.accumulo.core.clientImpl.TabletLocator;
 import org.apache.accumulo.core.data.ByteSequence;
 import org.apache.accumulo.core.data.Key;
 import org.apache.accumulo.core.data.Mutation;
@@ -43,6 +43,7 @@ import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.iterators.IteratorEnvironment;
 import org.apache.accumulo.core.iterators.SortedKeyValueIterator;
 import org.apache.accumulo.core.iterators.WrappingIterator;
+import org.apache.accumulo.core.util.cleaner.CleanerUtil;
 import org.apache.accumulo.test.util.SerializationUtil;
 import org.apache.hadoop.io.Text;
 import org.slf4j.Logger;
@@ -62,6 +63,26 @@ import org.slf4j.LoggerFactory;
 public class BatchWriterIterator extends WrappingIterator {
   private static final Logger log = LoggerFactory.getLogger(BatchWriterIterator.class);
 
+  private static final String OPT_sleepAfterFirstWrite = "sleepAfterFirstWrite";
+  private static final String OPT_numEntriesToWritePerEntry = "numEntriesToWritePerEntry";
+  private static final String OPT_batchWriterTimeout = "batchWriterTimeout";
+  private static final String OPT_batchWriterMaxMemory = "batchWriterMaxMemory";
+  private static final String OPT_clearCacheAfterFirstWrite = "clearCacheAfterFirstWrite";
+  private static final String OPT_splitAfterFirstWrite = "splitAfterFirstWrite";
+
+  private static final String ZOOKEEPERHOST = "zookeeperHost";
+  private static final String INSTANCENAME = "instanceName";
+  private static final String TABLENAME = "tableName";
+  private static final String USERNAME = "username";
+  private static final String ZOOKEEPERTIMEOUT = "zookeeperTimeout";
+  // base64 encoding of token
+  private static final String AUTHENTICATION_TOKEN = "authenticationToken";
+  // class of token
+  private static final String AUTHENTICATION_TOKEN_CLASS = "authenticationTokenClass";
+  private static final String SUCCESS_STRING = "success";
+
+  public static final Value SUCCESS_VALUE = new Value(SUCCESS_STRING);
+
   private Map<String,String> originalOptions; // remembered for deepCopy
 
   private int sleepAfterFirstWrite = 0;
@@ -70,42 +91,25 @@ public class BatchWriterIterator extends WrappingIterator {
   private long batchWriterMaxMemory = 0;
   private boolean clearCacheAfterFirstWrite = false;
   private boolean splitAfterFirstWrite = false;
-
-  public static final String OPT_sleepAfterFirstWrite = "sleepAfterFirstWrite",
-      OPT_numEntriesToWritePerEntry = "numEntriesToWritePerEntry",
-      OPT_batchWriterTimeout = "batchWriterTimeout",
-      OPT_batchWriterMaxMemory = "batchWriterMaxMemory",
-      OPT_clearCacheAfterFirstWrite = "clearCacheAfterFirstWrite",
-      OPT_splitAfterFirstWrite = "splitAfterFirstWrite";
-
   private String instanceName;
   private String tableName;
   private String zookeeperHost;
   private int zookeeperTimeout = -1;
   private String username;
   private AuthenticationToken auth = null;
-
-  public static final String ZOOKEEPERHOST = "zookeeperHost", INSTANCENAME = "instanceName",
-      TABLENAME = "tableName", USERNAME = "username", ZOOKEEPERTIMEOUT = "zookeeperTimeout",
-      AUTHENTICATION_TOKEN = "authenticationToken", // base64 encoding of token
-      AUTHENTICATION_TOKEN_CLASS = "authenticationTokenClass"; // class of token
-
   private BatchWriter batchWriter;
   private boolean firstWrite = true;
   private Value topValue = null;
-  private Connector connector;
-
-  public static final String SUCCESS_STRING = "success";
-  public static final Value SUCCESS_VALUE = new Value(SUCCESS_STRING.getBytes());
+  private AccumuloClient accumuloClient;
 
   public static IteratorSetting iteratorSetting(int priority, int sleepAfterFirstWrite,
       long batchWriterTimeout, long batchWriterMaxMemory, int numEntriesToWrite, String tableName,
-      Connector connector, AuthenticationToken token, boolean clearCacheAfterFirstWrite,
+      AccumuloClient accumuloClient, AuthenticationToken token, boolean clearCacheAfterFirstWrite,
       boolean splitAfterFirstWrite) {
+    ClientInfo info = ClientInfo.from(accumuloClient.properties());
     return iteratorSetting(priority, sleepAfterFirstWrite, batchWriterTimeout, batchWriterMaxMemory,
-        numEntriesToWrite, tableName, connector.getInstance().getZooKeepers(),
-        connector.getInstance().getInstanceName(),
-        connector.getInstance().getZooKeepersSessionTimeOut(), connector.whoami(), token,
+        numEntriesToWrite, tableName, info.getZooKeepers(), info.getInstanceName(),
+        info.getZooKeepersSessionTimeOut(), accumuloClient.whoami(), token,
         clearCacheAfterFirstWrite, splitAfterFirstWrite);
   }
 
@@ -143,18 +147,24 @@ public class BatchWriterIterator extends WrappingIterator {
   private void parseOptions(Map<String,String> options) {
     this.originalOptions = new HashMap<>(options);
 
-    if (options.containsKey(OPT_numEntriesToWritePerEntry))
+    if (options.containsKey(OPT_numEntriesToWritePerEntry)) {
       numEntriesToWritePerEntry = Integer.parseInt(options.get(OPT_numEntriesToWritePerEntry));
-    if (options.containsKey(OPT_sleepAfterFirstWrite))
+    }
+    if (options.containsKey(OPT_sleepAfterFirstWrite)) {
       sleepAfterFirstWrite = Integer.parseInt(options.get(OPT_sleepAfterFirstWrite));
-    if (options.containsKey(OPT_batchWriterTimeout))
+    }
+    if (options.containsKey(OPT_batchWriterTimeout)) {
       batchWriterTimeout = Long.parseLong(options.get(OPT_batchWriterTimeout));
-    if (options.containsKey(OPT_batchWriterMaxMemory))
+    }
+    if (options.containsKey(OPT_batchWriterMaxMemory)) {
       batchWriterMaxMemory = Long.parseLong(options.get(OPT_batchWriterMaxMemory));
-    if (options.containsKey(OPT_clearCacheAfterFirstWrite))
+    }
+    if (options.containsKey(OPT_clearCacheAfterFirstWrite)) {
       clearCacheAfterFirstWrite = Boolean.parseBoolean(options.get(OPT_clearCacheAfterFirstWrite));
-    if (options.containsKey(OPT_splitAfterFirstWrite))
+    }
+    if (options.containsKey(OPT_splitAfterFirstWrite)) {
       splitAfterFirstWrite = Boolean.parseBoolean(options.get(OPT_splitAfterFirstWrite));
+    }
 
     instanceName = options.get(INSTANCENAME);
     tableName = options.get(TABLENAME);
@@ -168,26 +178,25 @@ public class BatchWriterIterator extends WrappingIterator {
   }
 
   private void initBatchWriter() {
-    ClientConfiguration cc = ClientConfiguration.loadDefault().withInstance(instanceName)
-        .withZkHosts(zookeeperHost).withZkTimeout(zookeeperTimeout);
-    Instance instance = new ZooKeeperInstance(cc);
-    try {
-      connector = instance.getConnector(username, auth);
-    } catch (Exception e) {
-      log.error("failed to connect to Accumulo instance " + instanceName, e);
-      throw new RuntimeException(e);
-    }
+    accumuloClient = Accumulo.newClient().to(instanceName, zookeeperHost).as(username, auth)
+        .zkTimeout(zookeeperTimeout).build();
 
     BatchWriterConfig bwc = new BatchWriterConfig();
     bwc.setMaxMemory(batchWriterMaxMemory);
     bwc.setTimeout(batchWriterTimeout, TimeUnit.SECONDS);
 
     try {
-      batchWriter = connector.createBatchWriter(tableName, bwc);
+      batchWriter = accumuloClient.createBatchWriter(tableName, bwc);
     } catch (TableNotFoundException e) {
       log.error(tableName + " does not exist in instance " + instanceName, e);
+      accumuloClient.close();
       throw new RuntimeException(e);
+    } catch (RuntimeException e) {
+      accumuloClient.close();
+      throw e;
     }
+    // this is dubious, but necessary since iterators aren't closeable
+    CleanerUtil.batchWriterAndClientCloser(this, log, batchWriter, accumuloClient);
   }
 
   /**
@@ -207,17 +216,19 @@ public class BatchWriterIterator extends WrappingIterator {
 
         if (firstWrite) {
           batchWriter.flush();
-          if (clearCacheAfterFirstWrite)
+          if (clearCacheAfterFirstWrite) {
             TabletLocator.clearLocators();
+          }
           if (splitAfterFirstWrite) {
             SortedSet<Text> splits = new TreeSet<>();
             splits.add(new Text(row));
-            connector.tableOperations().addSplits(tableName, splits);
+            accumuloClient.tableOperations().addSplits(tableName, splits);
           }
-          if (sleepAfterFirstWrite > 0)
+          if (sleepAfterFirstWrite > 0) {
             try {
               Thread.sleep(sleepAfterFirstWrite);
             } catch (InterruptedException ignored) {}
+          }
           firstWrite = false;
         }
       }
@@ -228,32 +239,24 @@ public class BatchWriterIterator extends WrappingIterator {
       log.error("Problem while BatchWriting to target table " + tableName, e);
       failure = e.getClass().getSimpleName() + ": " + e.getMessage();
     }
-    topValue = failure == null ? SUCCESS_VALUE : new Value(failure.getBytes());
-  }
-
-  @Override
-  protected void finalize() throws Throwable {
-    super.finalize();
-    try {
-      batchWriter.close();
-    } catch (MutationsRejectedException e) {
-      log.error("Failed to close BatchWriter; some mutations may not be applied", e);
-    }
+    topValue = failure == null ? SUCCESS_VALUE : new Value(failure);
   }
 
   @Override
   public void next() throws IOException {
     super.next();
-    if (hasTop())
+    if (hasTop()) {
       processNext();
+    }
   }
 
   @Override
   public void seek(Range range, Collection<ByteSequence> columnFamilies, boolean inclusive)
       throws IOException {
     super.seek(range, columnFamilies, inclusive);
-    if (hasTop())
+    if (hasTop()) {
       processNext();
+    }
   }
 
   @Override
@@ -265,7 +268,7 @@ public class BatchWriterIterator extends WrappingIterator {
   public SortedKeyValueIterator<Key,Value> deepCopy(IteratorEnvironment env) {
     BatchWriterIterator newInstance;
     try {
-      newInstance = this.getClass().newInstance();
+      newInstance = this.getClass().getDeclaredConstructor().newInstance();
       newInstance.init(getSource().deepCopy(env), originalOptions, env);
       return newInstance;
     } catch (Exception e) {
