@@ -1,69 +1,71 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   https://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.test.functional;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.fail;
 
+import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.util.Collections;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
 import java.util.SortedMap;
 import java.util.TreeMap;
+import java.util.stream.Collectors;
 
 import org.apache.accumulo.core.Constants;
+import org.apache.accumulo.core.client.Accumulo;
+import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.client.AccumuloException;
 import org.apache.accumulo.core.client.AccumuloSecurityException;
-import org.apache.accumulo.core.client.Connector;
+import org.apache.accumulo.core.client.BatchDeleter;
 import org.apache.accumulo.core.client.Scanner;
+import org.apache.accumulo.core.client.TableExistsException;
 import org.apache.accumulo.core.client.TableNotFoundException;
 import org.apache.accumulo.core.client.admin.CompactionConfig;
-import org.apache.accumulo.core.client.impl.ClientContext;
-import org.apache.accumulo.core.client.impl.TabletLocator;
-import org.apache.accumulo.core.client.impl.Translator;
-import org.apache.accumulo.core.client.impl.Translators;
 import org.apache.accumulo.core.client.rfile.RFile;
 import org.apache.accumulo.core.client.rfile.RFileWriter;
+import org.apache.accumulo.core.clientImpl.ClientContext;
+import org.apache.accumulo.core.clientImpl.TabletLocator;
 import org.apache.accumulo.core.conf.Property;
-import org.apache.accumulo.core.conf.SiteConfiguration;
 import org.apache.accumulo.core.data.Key;
+import org.apache.accumulo.core.data.TableId;
 import org.apache.accumulo.core.data.Value;
-import org.apache.accumulo.core.data.impl.KeyExtent;
-import org.apache.accumulo.core.data.thrift.MapFileInfo;
-import org.apache.accumulo.core.data.thrift.TKeyExtent;
+import org.apache.accumulo.core.dataImpl.KeyExtent;
+import org.apache.accumulo.core.dataImpl.thrift.MapFileInfo;
 import org.apache.accumulo.core.metadata.MetadataTable;
 import org.apache.accumulo.core.metadata.schema.MetadataSchema.TabletsSection.BulkFileColumnFamily;
 import org.apache.accumulo.core.metadata.schema.MetadataSchema.TabletsSection.DataFileColumnFamily;
 import org.apache.accumulo.core.rpc.ThriftUtil;
+import org.apache.accumulo.core.rpc.clients.ThriftClientTypes;
 import org.apache.accumulo.core.security.Authorizations;
-import org.apache.accumulo.core.tabletserver.thrift.TabletClientService;
-import org.apache.accumulo.core.trace.Tracer;
-import org.apache.accumulo.core.util.HostAndPort;
+import org.apache.accumulo.core.security.TablePermission;
+import org.apache.accumulo.core.tabletingest.thrift.TabletIngestClientService;
+import org.apache.accumulo.core.trace.TraceUtil;
 import org.apache.accumulo.harness.AccumuloClusterHarness;
-import org.apache.accumulo.master.tableOps.BulkImport;
-import org.apache.accumulo.server.AccumuloServerContext;
-import org.apache.accumulo.server.client.HdfsZooInstance;
-import org.apache.accumulo.server.conf.ServerConfigurationFactory;
+import org.apache.accumulo.manager.tableOps.bulkVer1.BulkImport;
+import org.apache.accumulo.server.ServerContext;
 import org.apache.accumulo.server.fs.VolumeManager;
-import org.apache.accumulo.server.fs.VolumeManagerImpl;
 import org.apache.accumulo.server.zookeeper.TransactionWatcher.ZooArbitrator;
 import org.apache.hadoop.fs.FileStatus;
 import org.apache.hadoop.fs.FileSystem;
@@ -71,12 +73,29 @@ import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.io.Text;
 import org.apache.thrift.TApplicationException;
 import org.apache.thrift.TServiceClient;
-import org.junit.Test;
+import org.apache.thrift.transport.TTransportException;
+import org.apache.zookeeper.KeeperException;
+import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
+import com.google.common.net.HostAndPort;
 
 public class BulkFailureIT extends AccumuloClusterHarness {
+
+  interface Loader {
+    void load(long txid, ClientContext context, KeyExtent extent, Path path, long size,
+        boolean expectFailure) throws Exception;
+  }
+
+  @Test
+  public void testImportCompactionImport() throws Exception {
+    String[] tables = getUniqueNames(2);
+
+    // run test calling old bulk import RPCs
+    runTest(tables[0], 99999999L, BulkFailureIT::oldLoad);
+
+    // run test calling new bulk import RPCs
+    runTest(tables[1], 22222222L, BulkFailureIT::newLoad);
+  }
 
   /**
    * This test verifies two things. First it ensures that after a bulk imported file is compacted
@@ -85,88 +104,87 @@ public class BulkFailureIT extends AccumuloClusterHarness {
    * test. Internal (non public API) RPCs and Zookeeper state is manipulated directly. This is the
    * only way to interleave compactions with multiple, duplicate import RPC request.
    */
-  @Test
-  public void testImportCompactionImport() throws Exception {
-    Connector c = getConnector();
-    String table = getUniqueNames(1)[0];
+  protected void runTest(String table, long fateTxid, Loader loader) throws IOException,
+      AccumuloException, AccumuloSecurityException, TableExistsException, KeeperException,
+      InterruptedException, Exception, FileNotFoundException, TableNotFoundException {
+    try (AccumuloClient c = Accumulo.newClient().from(getClientProps()).build()) {
 
-    SortedMap<Key,Value> testData = createTestData();
+      SortedMap<Key,Value> testData = createTestData();
 
-    FileSystem fs = getCluster().getFileSystem();
-    String testFile = createTestFile(testData, fs);
+      FileSystem fs = getCluster().getFileSystem();
+      String testFile = createTestFile(fateTxid, testData, fs);
 
-    c.tableOperations().create(table);
-    String tableId = c.tableOperations().tableIdMap().get(table);
+      c.tableOperations().create(table);
+      String tableId = c.tableOperations().tableIdMap().get(table);
 
-    // Table has no splits, so this extent corresponds to the tables single tablet
-    KeyExtent extent = new KeyExtent(tableId.toString(), null, null);
+      // Table has no splits, so this extent corresponds to the tables single tablet
+      KeyExtent extent = new KeyExtent(TableId.of(tableId), null, null);
 
-    // Set up site configuration because this test uses server side code that expects it.
-    setupSiteConfig();
+      ServerContext asCtx = getServerContext();
+      ZooArbitrator.start(asCtx, Constants.BULK_ARBITRATOR_TYPE, fateTxid);
 
-    long fateTxid = 99999999L;
+      VolumeManager vm = asCtx.getVolumeManager();
 
-    AccumuloServerContext asCtx =
-        new AccumuloServerContext(new ServerConfigurationFactory(HdfsZooInstance.getInstance()));
-    ZooArbitrator.start(Constants.BULK_ARBITRATOR_TYPE, fateTxid);
+      // move the file into a directory for the table and rename the file to something unique
+      String bulkDir =
+          BulkImport.prepareBulkImport(asCtx, vm, testFile, TableId.of(tableId), fateTxid);
 
-    VolumeManager vm = VolumeManagerImpl.get();
+      // determine the files new name and path
+      FileStatus status = fs.listStatus(new Path(bulkDir))[0];
+      Path bulkLoadPath = fs.makeQualified(status.getPath());
 
-    // move the file into a directory for the table and rename the file to something unique
-    String bulkDir = BulkImport.prepareBulkImport(asCtx, vm, testFile, tableId);
+      // Directly ask the tablet to load the file.
+      loader.load(fateTxid, asCtx, extent, bulkLoadPath, status.getLen(), false);
 
-    // determine the files new name and path
-    FileStatus status = fs.listStatus(new Path(bulkDir))[0];
-    Path bulkLoadPath = fs.makeQualified(status.getPath());
+      assertEquals(Set.of(bulkLoadPath), getFiles(c, extent));
+      assertEquals(Set.of(bulkLoadPath), getLoaded(c, extent));
+      assertEquals(testData, readTable(table, c));
 
-    // Directly ask the tablet to load the file.
-    assignMapFiles(fateTxid, asCtx, extent, bulkLoadPath.toString(), status.getLen());
+      // Compact the bulk imported file. Subsequent request to load the file should be ignored.
+      c.tableOperations().compact(table, new CompactionConfig().setWait(true));
 
-    assertEquals(ImmutableSet.of(bulkLoadPath), getFiles(c, extent));
-    assertEquals(ImmutableSet.of(bulkLoadPath), getLoaded(c, extent));
-    assertEquals(testData, readTable(table, c));
+      Set<Path> tabletFiles = getFiles(c, extent);
+      assertFalse(tabletFiles.contains(bulkLoadPath));
+      assertEquals(1, tabletFiles.size());
+      assertEquals(Set.of(bulkLoadPath), getLoaded(c, extent));
+      assertEquals(testData, readTable(table, c));
 
-    // Compact the bulk imported file. Subsequent request to load the file should be ignored.
-    c.tableOperations().compact(table, new CompactionConfig().setWait(true));
+      // this request should be ignored by the tablet
+      loader.load(fateTxid, asCtx, extent, bulkLoadPath, status.getLen(), false);
 
-    Set<Path> tabletFiles = getFiles(c, extent);
-    assertFalse(tabletFiles.contains(bulkLoadPath));
-    assertEquals(1, tabletFiles.size());
-    assertEquals(ImmutableSet.of(bulkLoadPath), getLoaded(c, extent));
-    assertEquals(testData, readTable(table, c));
+      assertEquals(tabletFiles, getFiles(c, extent));
+      assertEquals(Set.of(bulkLoadPath), getLoaded(c, extent));
+      assertEquals(testData, readTable(table, c));
 
-    // this request should be ignored by the tablet
-    assignMapFiles(fateTxid, asCtx, extent, bulkLoadPath.toString(), status.getLen());
+      // this is done to ensure the tablet reads the load flags from the metadata table when it
+      // loads
+      c.tableOperations().offline(table, true);
+      c.tableOperations().online(table, true);
 
-    assertEquals(tabletFiles, getFiles(c, extent));
-    assertEquals(ImmutableSet.of(bulkLoadPath), getLoaded(c, extent));
-    assertEquals(testData, readTable(table, c));
+      // this request should be ignored by the tablet
+      loader.load(fateTxid, asCtx, extent, bulkLoadPath, status.getLen(), false);
 
-    // this is done to ensure the tablet reads the load flags from the metadata table when it loads
-    c.tableOperations().offline(table, true);
-    c.tableOperations().online(table, true);
+      assertEquals(tabletFiles, getFiles(c, extent));
+      assertEquals(Set.of(bulkLoadPath), getLoaded(c, extent));
+      assertEquals(testData, readTable(table, c));
 
-    // this request should be ignored by the tablet
-    assignMapFiles(fateTxid, asCtx, extent, bulkLoadPath.toString(), status.getLen());
+      // After this, all load request should fail.
+      ZooArbitrator.stop(asCtx, Constants.BULK_ARBITRATOR_TYPE, fateTxid);
 
-    assertEquals(tabletFiles, getFiles(c, extent));
-    assertEquals(ImmutableSet.of(bulkLoadPath), getLoaded(c, extent));
-    assertEquals(testData, readTable(table, c));
+      c.securityOperations().grantTablePermission(c.whoami(), MetadataTable.NAME,
+          TablePermission.WRITE);
 
-    // After this, all load request should fail.
-    ZooArbitrator.stop(Constants.BULK_ARBITRATOR_TYPE, fateTxid);
+      BatchDeleter bd = c.createBatchDeleter(MetadataTable.NAME, Authorizations.EMPTY, 1);
+      bd.setRanges(Collections.singleton(extent.toMetaRange()));
+      bd.fetchColumnFamily(BulkFileColumnFamily.NAME);
+      bd.delete();
 
-    try {
-      // expect this to fail
-      assignMapFiles(fateTxid, asCtx, extent, bulkLoadPath.toString(), status.getLen());
-      fail();
-    } catch (TApplicationException tae) {
+      loader.load(fateTxid, asCtx, extent, bulkLoadPath, status.getLen(), true);
 
+      assertEquals(tabletFiles, getFiles(c, extent));
+      assertEquals(Set.of(), getLoaded(c, extent));
+      assertEquals(testData, readTable(table, c));
     }
-
-    assertEquals(tabletFiles, getFiles(c, extent));
-    assertEquals(ImmutableSet.of(bulkLoadPath), getLoaded(c, extent));
-    assertEquals(testData, readTable(table, c));
   }
 
   private SortedMap<Key,Value> createTestData() {
@@ -178,8 +196,9 @@ public class BulkFailureIT extends AccumuloClusterHarness {
     return testData;
   }
 
-  private String createTestFile(SortedMap<Key,Value> testData, FileSystem fs) throws IOException {
-    Path base = new Path(getCluster().getTemporaryPath(), "testBulk_ICI");
+  private String createTestFile(long txid, SortedMap<Key,Value> testData, FileSystem fs)
+      throws IOException {
+    Path base = new Path(getCluster().getTemporaryPath(), "testBulk_ICI_" + txid);
 
     fs.delete(base, true);
     fs.mkdirs(base);
@@ -194,7 +213,7 @@ public class BulkFailureIT extends AccumuloClusterHarness {
     return filesStr;
   }
 
-  private SortedMap<Key,Value> readTable(String table, Connector connector)
+  private SortedMap<Key,Value> readTable(String table, AccumuloClient connector)
       throws TableNotFoundException {
     Scanner scanner = connector.createScanner(table, Authorizations.EMPTY);
 
@@ -207,20 +226,22 @@ public class BulkFailureIT extends AccumuloClusterHarness {
     return actual;
   }
 
-  public Set<Path> getLoaded(Connector connector, KeyExtent extent) throws TableNotFoundException {
+  public static Set<Path> getLoaded(AccumuloClient connector, KeyExtent extent)
+      throws TableNotFoundException {
     return getPaths(connector, extent, BulkFileColumnFamily.NAME);
   }
 
-  public Set<Path> getFiles(Connector connector, KeyExtent extent) throws TableNotFoundException {
+  public static Set<Path> getFiles(AccumuloClient connector, KeyExtent extent)
+      throws TableNotFoundException {
     return getPaths(connector, extent, DataFileColumnFamily.NAME);
   }
 
-  private Set<Path> getPaths(Connector connector, KeyExtent extent, Text fam)
+  private static Set<Path> getPaths(AccumuloClient connector, KeyExtent extent, Text fam)
       throws TableNotFoundException {
     HashSet<Path> files = new HashSet<>();
 
     Scanner scanner = connector.createScanner(MetadataTable.NAME, Authorizations.EMPTY);
-    scanner.setRange(extent.toMetadataRange());
+    scanner.setRange(extent.toMetaRange());
     scanner.fetchColumnFamily(fam);
 
     for (Entry<Key,Value> entry : scanner) {
@@ -230,36 +251,67 @@ public class BulkFailureIT extends AccumuloClusterHarness {
     return files;
   }
 
-  private List<KeyExtent> assignMapFiles(long txid, ClientContext context, KeyExtent extent,
-      String path, long size) throws Exception {
+  private static void oldLoad(long txid, ClientContext context, KeyExtent extent, Path path,
+      long size, boolean expectFailure) throws Exception {
 
-    TabletLocator locator = TabletLocator.getLocator(context, extent.getTableId());
+    TabletIngestClientService.Iface client = getClient(context, extent);
+    try {
+
+      Map<String,MapFileInfo> val = Map.of(path.toString(), new MapFileInfo(size));
+      Map<KeyExtent,Map<String,MapFileInfo>> files = Map.of(extent, val);
+
+      client.bulkImport(TraceUtil.traceInfo(), context.rpcCreds(), txid, files.entrySet().stream()
+          .collect(Collectors.toMap(entry -> entry.getKey().toThrift(), Entry::getValue)), false);
+      if (expectFailure) {
+        fail("Expected RPC to fail");
+      }
+    } catch (TApplicationException tae) {
+      if (!expectFailure) {
+        throw tae;
+      }
+    } finally {
+      ThriftUtil.returnClient((TServiceClient) client, context);
+    }
+  }
+
+  private static void newLoad(long txid, ClientContext context, KeyExtent extent, Path path,
+      long size, boolean expectFailure) throws Exception {
+
+    TabletIngestClientService.Iface client = getClient(context, extent);
+    try {
+
+      Map<String,MapFileInfo> val = Map.of(path.getName(), new MapFileInfo(size));
+      Map<KeyExtent,Map<String,MapFileInfo>> files = Map.of(extent, val);
+
+      client.loadFiles(TraceUtil.traceInfo(), context.rpcCreds(), txid, path.getParent().toString(),
+          files.entrySet().stream().collect(
+              Collectors.toMap(entry -> entry.getKey().toThrift(), Entry::getValue)),
+          false);
+
+      if (!expectFailure) {
+        while (!getLoaded(context, extent).contains(path)) {
+          Thread.sleep(100);
+        }
+      }
+
+    } finally {
+      ThriftUtil.returnClient((TServiceClient) client, context);
+    }
+  }
+
+  protected static TabletIngestClientService.Iface getClient(ClientContext context,
+      KeyExtent extent) throws AccumuloException, AccumuloSecurityException, TableNotFoundException,
+      TTransportException {
+    TabletLocator locator = TabletLocator.getLocator(context, extent.tableId());
 
     locator.invalidateCache(extent);
 
     HostAndPort location = HostAndPort
-        .fromString(locator.locateTablet(context, new Text(""), false, true).tablet_location);
+        .fromString(locator.locateTablet(context, new Text(""), false, true).getTserverLocation());
 
     long timeInMillis = context.getConfiguration().getTimeInMillis(Property.TSERV_BULK_TIMEOUT);
-    TabletClientService.Iface client = ThriftUtil.getTServerClient(location, context, timeInMillis);
-    try {
-
-      Map<String,MapFileInfo> val = ImmutableMap.of(path, new MapFileInfo(size));
-      Map<KeyExtent,Map<String,MapFileInfo>> files = ImmutableMap.of(extent, val);
-
-      List<TKeyExtent> failures = client.bulkImport(Tracer.traceInfo(), context.rpcCreds(), txid,
-          Translator.translate(files, Translators.KET), false);
-
-      return Translator.translate(failures, Translators.TKET);
-    } finally {
-      ThriftUtil.returnClient((TServiceClient) client);
-    }
-
-  }
-
-  private void setupSiteConfig() throws AccumuloException, AccumuloSecurityException {
-    for (Entry<String,String> entry : getCluster().getSiteConfiguration()) {
-      SiteConfiguration.getInstance().set(entry.getKey(), entry.getValue());
-    }
+    TabletIngestClientService.Iface client =
+        ThriftUtil.getClient(ThriftClientTypes.TABLET_INGEST, location, context, timeInMillis);
+    return client;
   }
 }
