@@ -1,27 +1,33 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   https://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.test.functional;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.apache.accumulo.harness.AccumuloITBase.SUNNY_DAY;
+import static org.apache.accumulo.harness.AccumuloITBase.random;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.File;
 import java.io.IOException;
@@ -29,9 +35,9 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map.Entry;
 import java.util.NoSuchElementException;
-import java.util.Random;
 import java.util.TreeMap;
 
 import org.apache.accumulo.core.Constants;
@@ -39,14 +45,14 @@ import org.apache.accumulo.core.data.Key;
 import org.apache.accumulo.core.data.Value;
 import org.apache.accumulo.core.iterators.SortedKeyValueIterator;
 import org.apache.accumulo.core.util.Pair;
-import org.apache.accumulo.test.categories.SunnyDayTests;
 import org.apache.accumulo.tserver.NativeMap;
+import org.apache.accumulo.tserver.memory.NativeMapLoader;
 import org.apache.hadoop.io.Text;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.junit.experimental.categories.Category;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 
-@Category(SunnyDayTests.class)
+@Tag(SUNNY_DAY)
 public class NativeMapIT {
 
   private Key newKey(int r) {
@@ -63,19 +69,18 @@ public class NativeMapIT {
   }
 
   private Value newValue(int v) {
-    return new Value(String.format("r%09d", v).getBytes(UTF_8));
+    return new Value(String.format("r%09d", v));
   }
 
   public static File nativeMapLocation() {
     File projectDir = new File(System.getProperty("user.dir")).getParentFile();
-    File nativeMapDir = new File(projectDir, "server/native/target/accumulo-native-"
-        + Constants.VERSION + "/accumulo-native-" + Constants.VERSION);
-    return nativeMapDir;
+    return new File(projectDir, "server/native/target/accumulo-native-" + Constants.VERSION
+        + "/accumulo-native-" + Constants.VERSION);
   }
 
-  @BeforeClass
+  @BeforeAll
   public static void setUp() {
-    NativeMap.loadNativeLib(Collections.singletonList(nativeMapLocation()));
+    NativeMapLoader.loadForTest(List.of(nativeMapLocation()), () -> fail("Can't load native maps"));
   }
 
   private void verifyIterator(int start, int end, int valueOffset,
@@ -118,7 +123,7 @@ public class NativeMapIT {
       iter = nm.iterator(newKey(i));
       verifyIterator(i, end, valueOffset, iter);
 
-      // lookup nonexistant key that falls after existing key
+      // lookup nonexistent key that falls after existing key
       iter = nm.iterator(newKey(i, 1, 1, 1, 1, false));
       verifyIterator(i + 1, end, valueOffset, iter);
     }
@@ -264,47 +269,15 @@ public class NativeMapIT {
 
     nm.delete();
 
-    try {
-      nm.put(newKey(1), newValue(1));
-      assertTrue(false);
-    } catch (IllegalStateException e) {
+    final Key key1 = newKey(1);
+    final Value value1 = newValue(1);
 
-    }
-
-    try {
-      nm.get(newKey(1));
-      assertTrue(false);
-    } catch (IllegalStateException e) {
-
-    }
-
-    try {
-      nm.iterator();
-      assertTrue(false);
-    } catch (IllegalStateException e) {
-
-    }
-
-    try {
-      nm.iterator(newKey(1));
-      assertTrue(false);
-    } catch (IllegalStateException e) {
-
-    }
-
-    try {
-      nm.size();
-      assertTrue(false);
-    } catch (IllegalStateException e) {
-
-    }
-
-    try {
-      iter.next();
-      assertTrue(false);
-    } catch (IllegalStateException e) {
-
-    }
+    assertThrows(IllegalStateException.class, () -> nm.put(key1, value1));
+    assertThrows(IllegalStateException.class, () -> nm.get(key1));
+    assertThrows(IllegalStateException.class, () -> nm.iterator(key1));
+    assertThrows(IllegalStateException.class, nm::iterator);
+    assertThrows(IllegalStateException.class, nm::size);
+    assertThrows(IllegalStateException.class, iter::next);
 
   }
 
@@ -315,13 +288,7 @@ public class NativeMapIT {
     insertAndVerify(nm, 1, 10, 0);
 
     nm.delete();
-
-    try {
-      nm.delete();
-      assertTrue(false);
-    } catch (IllegalStateException e) {
-
-    }
+    assertThrows(IllegalStateException.class, nm::delete);
   }
 
   @Test
@@ -362,24 +329,14 @@ public class NativeMapIT {
 
     Iterator<Entry<Key,Value>> iter = nm.iterator();
 
-    try {
-      iter.next();
-      assertTrue(false);
-    } catch (NoSuchElementException e) {
-
-    }
+    assertThrows(NoSuchElementException.class, iter::next);
 
     insertAndVerify(nm, 1, 1, 0);
 
     iter = nm.iterator();
     iter.next();
 
-    try {
-      iter.next();
-      assertTrue(false);
-    } catch (NoSuchElementException e) {
-
-    }
+    assertThrows(NoSuchElementException.class, iter::next);
 
     nm.delete();
   }
@@ -418,8 +375,8 @@ public class NativeMapIT {
           "Memory changed after inserting duplicate data " + mem1 + " " + mem3);
     }
 
-    byte bigrow[] = new byte[1000000];
-    byte bigvalue[] = new byte[bigrow.length];
+    byte[] bigrow = new byte[1000000];
+    byte[] bigvalue = new byte[bigrow.length];
 
     for (int i = 0; i < bigrow.length; i++) {
       bigrow[i] = (byte) (0xff & (i % 256));
@@ -453,11 +410,11 @@ public class NativeMapIT {
   }
 
   // random length random field
-  private static byte[] getRandomBytes(Random r, int maxLen) {
-    int len = r.nextInt(maxLen);
+  private static byte[] getRandomBytes(int maxLen) {
+    int len = random.nextInt(maxLen);
 
-    byte f[] = new byte[len];
-    r.nextBytes(f);
+    byte[] f = new byte[len];
+    random.nextBytes(f);
 
     return f;
   }
@@ -469,15 +426,13 @@ public class NativeMapIT {
     // insert things with varying field sizes and value sizes
 
     // generate random data
-    Random r = new Random(75);
-
     ArrayList<Pair<Key,Value>> testData = new ArrayList<>();
 
     for (int i = 0; i < 100000; i++) {
 
-      Key k = new Key(getRandomBytes(r, 97), getRandomBytes(r, 13), getRandomBytes(r, 31),
-          getRandomBytes(r, 11), (r.nextLong() & 0x7fffffffffffffffl), false, false);
-      Value v = new Value(getRandomBytes(r, 511));
+      Key k = new Key(getRandomBytes(97), getRandomBytes(13), getRandomBytes(31),
+          getRandomBytes(11), (random.nextLong() & 0x7fffffffffffffffL), false, false);
+      Value v = new Value(getRandomBytes(511));
 
       testData.add(new Pair<>(k, v));
     }
@@ -490,12 +445,7 @@ public class NativeMapIT {
     for (int i = 0; i < 2; i++) {
 
       // sort data
-      Collections.sort(testData, new Comparator<Pair<Key,Value>>() {
-        @Override
-        public int compare(Pair<Key,Value> o1, Pair<Key,Value> o2) {
-          return o1.getFirst().compareTo(o2.getFirst());
-        }
-      });
+      testData.sort(Comparator.comparing(Pair::getFirst));
 
       // verify
       Iterator<Entry<Key,Value>> iter1 = nm.iterator();
@@ -505,26 +455,30 @@ public class NativeMapIT {
         Entry<Key,Value> e = iter1.next();
         Pair<Key,Value> p = iter2.next();
 
-        if (!e.getKey().equals(p.getFirst()))
+        if (!e.getKey().equals(p.getFirst())) {
           throw new RuntimeException("Keys not equal");
+        }
 
-        if (!e.getValue().equals(p.getSecond()))
+        if (!e.getValue().equals(p.getSecond())) {
           throw new RuntimeException("Values not equal");
+        }
       }
 
-      if (iter1.hasNext())
+      if (iter1.hasNext()) {
         throw new RuntimeException("Not all of native map consumed");
+      }
 
-      if (iter2.hasNext())
+      if (iter2.hasNext()) {
         throw new RuntimeException("Not all of test data consumed");
+      }
 
       System.out.println("test 11 nm mem " + nm.getMemoryUsed());
 
       // insert data again w/ different value
-      Collections.shuffle(testData, r);
+      Collections.shuffle(testData, random);
       // insert unsorted data
       for (Pair<Key,Value> pair : testData) {
-        pair.getSecond().set(getRandomBytes(r, 511));
+        pair.getSecond().set(getRandomBytes(511));
         nm.put(pair.getFirst(), pair.getSecond());
       }
     }
@@ -536,12 +490,12 @@ public class NativeMapIT {
   public void testBinary() {
     NativeMap nm = new NativeMap();
 
-    byte emptyBytes[] = new byte[0];
+    byte[] emptyBytes = new byte[0];
 
     for (int i = 0; i < 256; i++) {
       for (int j = 0; j < 256; j++) {
-        byte row[] = new byte[] {'r', (byte) (0xff & i), (byte) (0xff & j)};
-        byte data[] = new byte[] {'v', (byte) (0xff & i), (byte) (0xff & j)};
+        byte[] row = {'r', (byte) (0xff & i), (byte) (0xff & j)};
+        byte[] data = {'v', (byte) (0xff & i), (byte) (0xff & j)};
 
         Key k = new Key(row, emptyBytes, emptyBytes, emptyBytes, 1);
         Value v = new Value(data);
@@ -553,8 +507,8 @@ public class NativeMapIT {
     Iterator<Entry<Key,Value>> iter = nm.iterator();
     for (int i = 0; i < 256; i++) {
       for (int j = 0; j < 256; j++) {
-        byte row[] = new byte[] {'r', (byte) (0xff & i), (byte) (0xff & j)};
-        byte data[] = new byte[] {'v', (byte) (0xff & i), (byte) (0xff & j)};
+        byte[] row = {'r', (byte) (0xff & i), (byte) (0xff & j)};
+        byte[] data = {'v', (byte) (0xff & i), (byte) (0xff & j)};
 
         Key k = new Key(row, emptyBytes, emptyBytes, emptyBytes, 1);
         Value v = new Value(data);
@@ -572,8 +526,8 @@ public class NativeMapIT {
 
     for (int i = 0; i < 256; i++) {
       for (int j = 0; j < 256; j++) {
-        byte row[] = new byte[] {'r', (byte) (0xff & i), (byte) (0xff & j)};
-        byte data[] = new byte[] {'v', (byte) (0xff & i), (byte) (0xff & j)};
+        byte[] row = {'r', (byte) (0xff & i), (byte) (0xff & j)};
+        byte[] data = {'v', (byte) (0xff & i), (byte) (0xff & j)};
 
         Key k = new Key(row, emptyBytes, emptyBytes, emptyBytes, 1);
         Value v = new Value(data);
@@ -591,8 +545,8 @@ public class NativeMapIT {
   public void testEmpty() {
     NativeMap nm = new NativeMap();
 
-    assertTrue(nm.size() == 0);
-    assertTrue(nm.getMemoryUsed() == 0);
+    assertEquals(0, nm.size());
+    assertEquals(0, nm.getMemoryUsed());
 
     nm.delete();
   }
